本地化补充 -补充了蒙古革命，西藏解放等内容的本地化 -略微修改了兰州解放的事件结构 -重新定位了IF线国策事件并移除了文件中的冗余事件

--- a/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
@@ -76,14 +76,12 @@
   LFB_COX_nc.2.t:0"进攻兰州胜利"
   LFB_COX_nc.2.d:0""
   LFB_COX_nc.2.a:0""
-  COX_GAN_war_win_tt:0"西北军被§G全数歼灭§!，通往陕西的大门已经大开！\n\n由于我们之前的渗透，兰州的整合将§G增加§!至[?Lanzhou_integrtion_index]。"
+  COX_GAN_war_win_tt:0"\n西北军被§G全数歼灭§!，通往陕西的大门已经大开！\n\n由于我们之前的渗透，兰州的整合将§G增加§!至[?Lanzhou_integrtion_index]。"
   LFB_COX_nc.3.t:0"进攻兰州失败"
   LFB_COX_nc.3.d:0""
   LFB_COX_nc.3.a:0""
-  COX_GAN_war_lose_tt:0"尽管我们竭尽全力，但西北军仍然得以§R全身而退§!。\n\n在西北军撤退时，他们对当地实施了惨绝人寰的焦土政策，这将使我们的整合进度§R倒退§!20点。"
-  LFB_COX_nc.17.t:0""
-  LFB_COX_nc.17.d:0""
-  LFB_COX_nc.17.a:0""
+  COX_GAN_war_lose_tt:0"\n尽管我们竭尽全力，但西北军仍然得以§R全身而退§!。\n\n在西北军撤退时，他们对当地实施了惨绝人寰的焦土政策，这将使我们的整合进度§R倒退§!20点。"
+  
   LFB_COX_nc.18.t:0"跨过黄河"
   LFB_COX_nc.18.d:0"是夜将明之时，西北抗日阵线的一队侦察兵再度抵达了晋陕之交。靛蓝色的天穹下，漆黑的黄河无声地流淌，河水两岸并无灯火，清冷的空气几近让人窒息。敌人轰炸机的威胁，令他们只能抓住夜幕消逝前的短暂空隙，遍寻一座座老渡口，以供大部队通过。“这儿一个鬼子都没有。”黄河左岸的树林间鬼影憧憧，似乎只是夜风的把戏。\n\n“做准备吧。”老班长授意道。\n\n片刻之后，一颗照明弹如流星般高高升起，右岸密林中响起了枪声，侦察兵们引燃了炸药，巨响在宽阔的河上回荡……\n\n左岸突然亮起了数盏探照灯，日军徒劳地端起步枪机枪，朝着河面警戒着。按照已经校准的射角，几枚迫击炮弹落在了对岸的密林中，数声闷响后，连鸟雀都惊不出来——显而易见的是，如同数个月来的每一次袭扰一样，红军侦察兵早已经消失的无影无踪。日本兵早已被这样的骚扰弄得心烦意乱，警戒在半个小时后就解除了，士兵们解下装具，收起步枪，打算安心睡一觉。毕竟，红军每夜只来一次，在摸清这规律后，他们便在前半夜和衣入睡，等到敌人的“袭扰”结束后，便可以不受军官阻拦的睡个好觉了。此刻，黄河沿岸的大部分日军都放松了警惕，毕竟，大日本帝国已倾其所有在黄河筑成了牢不可破的大堤，每一处渡口都严加戒备，每一个据点都固若金汤……\n\n黎明十分，天边隐约响起隆隆炮响，宛如惊雷般的炮弹在右岸的日军营垒间精准地炸开。从睡梦中惊醒的士兵们匆忙来到黄河边，在金黄色的朝阳下，一叶叶小柯宛如洒在黄河中的项链，原来红军早已过了河！\n\n通过疲敌之策，红军突破了山西的第一道防线。"
   LFB_COX_nc.18.a:0"a. 华北的门户就在我们眼前！"
@@ -91,11 +89,11 @@
   LFB_COX_nc.4.t:0"疯狗之死"
   LFB_COX_nc.4.d:0"£gezifu £gezifu 事情是怎么到这个地步的？整个西北方面军不知道，辻政信也不知道，几个月前，他还是这几十万平方公里土地的唯一主宰。转眼间，兰州和天水接连被攻克，整支西北方面军都被红军彻底包围。\n\n£gezifu £gezifu 等等？红军？\n\n£gezifu £gezifu 但是辻政信没时间想这些，他在中国军队彻底包围指挥部之前找到了一匹快马，头也不回地逃离了。\n\n£gezifu £gezifu “等到我回到东京，我一定要说服军部再给我一支军队，然后再次回到西北！ 再杀一遍！”\n\n£gezifu £gezifu 长途的骑行和滴水未进使得这个六十二岁的老人逐渐体力不支，他的精神逐渐模糊，他的四肢慢慢无力。\n\n£gezifu £gezifu “难道上天真的要亡我于此？”\n\n£gezifu £gezifu 终于，他本能地将马匹的速度降了下来，然后竭尽全力让自己坐在马上。\n\n£gezifu £gezifu “呼，呼，我只需要…休息一会…”\n\n£gezifu £gezifu 他再次醒来时，发现自己的床边围着全村的人，所有人都盯着他，辻政信见过这种眼神，在菲律宾，一个濒死的美国战俘曾经这样看着他\n\n£gezifu £gezifu 辻政信故作镇定地从床上爬起，然后慢慢向村子外面走去，人群中自动让出一条道路。\n\n£gezifu £gezifu 他走出了屋子，一开始是走着的，然后慢慢变成跑步，最后几乎是竭尽全力地跑。\n\n£gezifu £gezifu 土枪，菜刀，锄头，剪刀，都跟在后面。\n\n£gezifu £gezifu 好像是天注定的，辻政信被一块石头绊倒，他很快地翻过身来，恐惧地看着一张张如黄土般的面庞，这些人中，他一个也不认识，但是他们认识他。\n\n£gezifu £gezifu “したくない！ したくない！ 助けて！”（不！不！救救我啊！）"
   LFB_COX_nc.4.a:0"大快人心事！"
-  COX_tsuji_masanobu_death_tt:0"人面兽心的怪物终于迎来了自己的结局：不是在战场上壮烈牺牲，而是被自己所蔑视的，蝼蚁一般的人们踩在脚下。"
+  COX_tsuji_masanobu_death_tt:0"人面兽心的怪物终于迎来了自己的结局：不是在战场上壮烈牺牲，而是被自己所蔑视的，蝼蚁一般的人们踩在脚下。\n\n"
   LFB_COX_nc.5.t:0"功亏一篑"
   LFB_COX_nc.5.d:0"£gezifu £gezifu 辻政信此时端坐在机舱内，天皇御赐的菊花纹军刀立在双腿之中，他面容肃穆，戴着白手套的两只手交叉摁住刀柄。坐在身旁的则是他的军官团。飞机在跑道上滑行，缓缓起飞，目标沧州。虽然他并未在兰州为帝国带来大胜，但天皇已经发下谕旨——鉴于此刻帝国正遭到外敌威胁，需要每一位忠心耿耿的士兵奋起而战。辻政信可以免于切腹，西北军也被慷慨地赠予了一次将功补过的机会……\n\n£gezifu £gezifu 念及天皇的慈悲，辻政信不禁长出了口气。或许大陆再次兴起的战端已经彻底挽救了大日本帝国，令国体为之一振，天皇殿下必然已将朝中奸佞扫除。自己接下来的工作，便是再次尽到军人的本分，为帝国戍守华北。对于此事，辻政信显得胸有成竹——远征军的战士们个个都是身经百战的精英，心怀崇高的信仰。而经过数天的激战，他本人也对共党常用的渗透与伏击战术有所了解……\n\n£gezifu £gezifu 没了补给短缺，与情报的劣势，帝国经营数十年的华北地区，正是他再度崛起的绝佳舞台……"
   LFB_COX_nc.5.a:0"为山九仞,功亏一篑。"
-  COX_GAN_extraction_tt:0"西北军的精锐部队将会在华北§R重组§!！"
+  COX_GAN_extraction_tt:0"西北军的精锐部队将会在华北§R重组§!！\n\n"
   LFB_COX_nc.6.t:0"西北军在我方领土重新集结"
   LFB_COX_nc.6.d:0""
   LFB_COX_nc.6.a:0"好的。"
@@ -203,6 +201,22 @@
   NCC_fascism_party:"国民党-华政会"
 
   #蒙古
+  LFB_COX_nc.20.t:0"有人来投"
+  LFB_COX_nc.20.d:0"查干巴拉是一个外向的人，因此他很喜欢自己的工作。作为红军里少有的能熟练使用汉语和蒙语的干部，他被分到了新疆苏区和伪蒙疆边界的边防连当排长兼职翻译。\n\n查干巴拉不是新疆人，他的老家在呼伦贝尔，当年曾经加入抗联，和日本人拼过刺刀，后来也朝德国人扔过燃烧弹。他是在贝加尔湖再次找到组织的。\n\n虽说名义上和蒙疆还是交战状态，但是对面的边防连可能是觉得多一事不如少一事，也可能是碍于红军的大名，不敢有什么大动作。逢年过节还会打着白旗送来酒肉，和红军聊聊天，说说以后的生计。\n\n苏区这边会蒙语的不多，于是每次有这种“外交活动”查干巴拉都会参与，虽然方言不同，但是一来二去，居然也对他们有了点感情。\n\n因为这件事情，查干巴拉甚至成了政委的定期检查对象。\n\n事情在今晚有了改变。\n\n看着冲天的火光，查干巴拉立刻命令自己的那一个排进入战斗位置，同时要求通讯兵发报到连部。\n\n半晌过去，别说敌人的影子了，就连打过来的炮弹都没见着。\n\n查干巴拉也越发奇怪，难道他们总不能在内斗吧。\n\n又过去半晌，一个眼神好的士兵突然喊道：“排长！那边有火光！”\n\n向他喊的方向过去，只能看到一群身穿军装，打着红旗的人…红旗？\n\n随着他们逐渐靠近，好像还能听到他们在喊一些蒙语，俄语，甚至水平糟糕的汉语。\n\n“Не стреляйте! Не стреляйте!Мы друзья!”（“不要开枪！不要开枪！我们是友军！”）\n\n“Битгий бууд! Битгий бууд! Бид бол холбоотон!”\n\n查干巴拉有些发怔，但是他很快回过神来，对着战士们喊道：“小张！你带着火把跟着我过来！”\n\n“是！”\n\n“小李，我们两个要是回不来！ 你就是排长了！”\n\n“排长！你不能去！让我带几个同志去看看吧！”\n\n“你少扯没用的，咱们排除了我没人会蒙古话，我不去没人能去！小张！快来！”\n\n夜幕中，两个人，一人一支火把艰难地前进着，时不时停下来，听着周围的风吹草动，两人悄悄把火把吹熄，在不易察觉处蹲下。\n\n看着之前的那片火光逐渐靠近。查干和小张突然站了起来，拿枪对准了他们：“Битгий хөдөл! Гараа өргө!”“不许动！举起手来！”\n\n夜色中，查干巴拉和小张与这支不明来路的人相互对峙。但是对方却没有要冲突的意思，反而是哭着走了过来。"
+  LFB_COX_nc.20.a:0"эцэст нь чамайг оллоо!（可算是找到你们了！）"
+  LFB_COX_nc.21.t:0"总得有人负责"
+  LFB_COX_nc.21.d:0"雷政委第一次觉得这条路这么难走。\n\n好事不出门，坏事传千里。几天前边境冲突的事情已经传遍了全师，兄弟部队和上级首长的电话接了好几茬，现在团长已经拿着简报去师部了。而雷政委则赶去冲突发生的地点进一步了解情况。\n\n本来零星的冲突是很正常的，但是一个连的驻地上突然多出来了一个营的人就不正常了。\n\n“希望那个查干巴拉别给我惹麻烦。要是策反了伪蒙的军队还好，要是收容了那里的败军…天知道他们是什么人！”\n\n来到连部，雷政委先看到三连的连长，然后又看到一旁坐立不安的查干巴拉。\n\n“查干！你又给我惹什么祸了？”\n\n“政委！我可没给您闯祸！”\n\n “还说没给我闯祸！现在你抓俘虏的事情全师都知道了！”\n\n“雷政委！您还没有了解情况！他们不是俘虏！”\n\n“不是俘虏？那他们是什么人？”\n\n“他们是蒙古人民军！”\n\n原来在五十年代的失败后，蒙古人民军并没有被完全消灭，而是靠着蒙古高原的丘陵展开了游击战，依靠缴获的枪弹与图瓦的援助，他们的游击战在开始时有声有色。\n\n可好景不长，五十年代时，共荣圈对蒙古革命展开了围剿。在日军不惜成本的直升机巡飞战术下，游击战的效果大不如前。在空旷的戈壁上，没有树木的掩护，被发现的游击队员就是活靶子。\n\n 游击队几乎被赶出蒙古，只能在贝加尔湖和蒙疆的边境苟且偷生，直到几年前，蒙古高原西部滚滚翻涌的革命浪潮让他们看到了希望。\n\n，“第二次全面抗战的爆发再次给了他们希望。” 查干继续说道：“随着日军的收缩，现在蒙古境内人心浮动，但多年来，他们的损失确实不小，再加上图瓦没有多余的物资可以支援他们了……”\n\n”所以他们就一路走到了新疆？“\n\n“是的，政委同志，他们一到我们就给他们缴了枪，但是他们也不抵触，就乐呵呵地把枪给我们了，说什么看见红星就放心了。我和他们营长谈了谈，他说这个营只是他们的先头部队。如果算上全部能召集的离散部队，大概有一个半师"
+  LFB_COX_nc.21.a:0"“还有别人长征？”"
+  LFB_COX_nc.22.t:0"总得有人贡献"
+  LFB_COX_nc.22.d:0"两人来到屋外，此时屋外已经挤满了人民军的兵，带头的敬了个军礼，说道：“Би бол МБНЭ-ийн 1-р армийн 1-р морьт дивизийн тагнуулын батальоны захирагч Эргонидорж， бүх батальон командлагчийн удирдлага дор ажилладаг.” \n\n查干对着政委开始翻译：“他说：我是蒙古人民军第一军第一骑兵师侦察营营长额尔哥尼多尔济，全营听首长的指挥。”\n\n政委点点头，对着查干说：“这样，我说一句你翻译一句。”\n\n“蒙古人民军的同志们！你们辛苦了！”\n\n“Монгол ардын армийн нөхдүүд ээ! Та шаргуу ажилласан”\n\n “同志们的情况，我已经了解了，我很快就会报告给苏区中央。”\n\n“Би нөхдүүдийн нөхцөл байдлын талаар мэдсэн бөгөөд удахгүй ЗХУ-ын Төв Хороонд мэдээлэх болно.”\n\n“苏区很快会给你们提供驻地和训练场所，你们可以先给人民军的指挥官发报，报个平安。”\n\n“Зөвлөлтийн нутаг удахгүй гарнизон， бэлтгэлийн байраар хангана.Эхлээд ардын армийн командлагч руу тайтгарал илгээж， аюулгүй болсон тухайгаа мэдэгдээрэй.”\n\n“Маш сайн（太好了）”\n\n“Миний зөв（我就说来对了）”\n\n“бид дэмий явсангүй（咱们没白走）”\n\n人民军的漫漫长路终于走到了头，连部的空气也变得快活了起来。\n\n“那么大家现在还有没有什么急切的愿望？你们既是友人，也是客人，只要是合理的要求，我雷志成一定尽力满足。”\n\n这句话让在场的所有人民军都安静了下来，刚刚快活的空气荡然无存，他们的脸上都没了生气，甚至有几个年轻的士兵在轻声哭泣。\n\n“查干，这是怎么了？我说错什么话了吗？”\n\n“政委同志，您没说错，只是…”"
+  LFB_COX_nc.22.a:0" “他们想回家。”"
+  LFB_COX_nc.23.t:0"蒙古解放阵线建立"
+  LFB_COX_nc.23.d:0"“泽登巴尔同志，在这里住得还习惯吗。”\n\n“还好吧毛岸英同志，住在这里至少比担惊受怕好多了。”\n\n自从那次吓人的边境冲突之后已经过去好几个月了。越来越多的蒙古人民军来到了新疆苏区。\n\n甚至连那位传奇的游击领袖，泽登巴尔也来到了这里。\n\n这天，毛岸英带着外交人员来到了苏赫巴托的住处，尽管他们从未见过面。但是以前留苏的经历和抗日的战绩让两人很快熟络到了一起。\n\n“泽登巴尔同志，我这次来，主要还是想和你讨论一下蒙古的未来。”毛岸英将文件递给泽登巴尔，“毕竟我们都知道，离乡的感觉并不好受。”\n\n泽登巴尔接过文件，细细阅读之后，松了一口气。文件大体是关于人民军与红军的军事合作与交流，却丝毫没有提及中国对外蒙古的主权声索。泽登巴尔一直担心毛岸英会趁着这个机会要回外蒙古的主权。\n\n“我们目前的打算。”毛岸英开始讲起接下来的军事部署。“是在准备完成之后开始渗透起蒙古的工作，至于目标，则是控制大部分与苏区接壤的蒙古地区，最好能到达乌兰巴托。为此，苏区将提供一切可能的帮助，包括人员，装备，训练。”\n\n泽登巴尔点了点头：“那就麻烦您了。”"
+  LFB_COX_nc.23.a:0"Да здравствует революция！（革命万岁！）"
+  LFB_NC_MEN_tt:0"我们将能够通过决议支持蒙古革命！"
+  LFB_COX_nc.24.t:0"泽登巴尔告乌兰巴托同胞书"
+  LFB_COX_nc.24.d:0"同胞们！自我们从清朝的帝国主义中独立以来，这座城市经受了多少苦难！这座城市的居民永远不会忘记1921年时，我们是如何团结起来，赶走了反动的博克多汗和他的走狗恩琴男爵。也不会忘记后来德国法西斯和日本法西斯发动战争时，蒙古的军民是如何保卫他们的国家的。虽然我们暂时被日本人击败，但是蒙古人民不会向任何帝国主义屈服！我们永远是自由的！有的人或许会说：在日本人的治下过活吧，因为这样好过再次燃起战火。相信这句话的人，看看乌兰巴托城吧，这座城市的哪一处地方没有被日本人控制？哪一分钱财没有被日本人榨取？他们穷尽每一种方法，将蒙古的所剩无几的财富榨得一干二净。正如旧时代的贵族和喇嘛！自由的蒙古不会忍受这样的屈辱！\n\n面对这样的情况，蒙古人民和世界上其他千千万万受到法西斯压迫的人民一样！因为这座城市是英雄的城市，城市的人民是英雄的人民！他们永远记得乌兰巴托(即“红色英雄城”）的含义，并且亲身实践它！或许有人觉得，日本人太强大了，我们永远无法战胜他们。但是恩琴男爵在我们头上作威作福的时候，也有人这么说过，他的下场如何呢？难道不是被俄罗斯和蒙古人民的团结所击败了吗？还有曾经统治蒙古的徐树铮，不也被中国的五四运动打下台了吗？如此看来，总有一天，日本人也会像历史上一切侵略者一样，得到他们应有的惩罚！"
+  LFB_COX_nc.24.a:0"总有一天，总有一天…！"
   COX_NC_MEN_revolution:0"蒙古革命"
   COX_NC_MEN_revolution_desc:0"\n\n\n\n\n\n日本对亚洲各国压迫的形式迥异，但残虐程度却有过之而无不及。十年前，在蒙古高原西侧，生性自由的当地人民曾掀起过规模浩大的抵抗；但彼时的日寇正值如日中天，而蒙古人民军除了图瓦的俄罗斯友军之外别无其他增援。在那时，蒙人阵几乎被完全歼灭，但即便如此，草原上的抵抗却从未终止。人民军的残部在边陲之地一边放牧牛羊，一边袭扰敌军后方，一度给日寇造成了不小的压力；但随时间推移，日军逐渐巩固了防御，在他们直升机部队日夜不停的巡逻下，蒙人阵的活动范围也被压制在了边境的贫瘠之地。\n\n现如今，随着中原战端再起，日军的注意力也从蒙古转移，这给了我们蒙古同志们一个宝贵的机会。尽管我们的大部队难以直接参与在蒙古草原的战斗，我们仍然可以尽力协助蒙古本土的同志，他们将开辟另一条战线，牵制伪政权的兵力，并成为我们北方战线上珍贵的盟友。\n\n由于地势险峻，交通不便，我们并无法获取有关当地局势的详细信息；尽管如此，我们还是通过零散的渠道拼凑出现状的概况：\n\n\n蒙人阵现在[Get_LFB_NC_MEN_state]"
   LFB_NC_MEN_weak:0"§R尚未从战败的阴影中走出§!，倘若革命现在爆发，他们仓促组建的部队将难以有效对抗伪蒙政权。"
@@ -211,7 +225,7 @@
   COX_MEN_countdown:0"来自草原的消息"
   COX_MEN_countdown_tt:0"蒙人阵正蠢蠢欲动......"
   COX_MEN_start_revolution:0"时机已到！"
-  COX_MEN_start_revolution_trigger_tt:0"蒙人阵已经对革命做出了像样的准备"
+  COX_MEN_start_revolution_trigger_tt:0"蒙人阵已经对革命做出了§Y像样的准备§!"
   COX_MEN_start_revolution_effect_tt:0"蒙古人民将会向日本人的走狗发起反抗！"
   COX_MEN_military_support:0"军事支援"
   COX_MEN_military_support_avaliable_tt:0"这一决议还未执行过五次"
@@ -228,13 +242,13 @@
   LFB_huabei.9.d:0"或许是因为我方在二次抗日战争中的惊人表现，在经过几轮谈判之后，西藏当局在玉树宣布：西藏将以自治区的形式回归我国统治。\n\n自此，中国大陆上最后一个受日本影响的区域得到了解放。"
   LFB_huabei.9.a:0"中国，统一而不可分割！"
   LFB_IF_TIB_peace_tt:0"§G西藏回归了祖国的怀抱。§!"
-  LFB_huabei.10.t:0""
-  LFB_huabei.10.d:0""
-  LFB_huabei.10.a:0""
+  LFB_huabei.10.t:0"准备解放西藏"
+  LFB_huabei.10.d:0"随着解放战争的进行，经过中央以及前委对如今形势的研判，一致认为现在正是进军西藏、武力解放藏区的最好时机；尤其要赶在国民党反动派，之前对西藏施加有效的影响。\n\n先行部队、物资等已开始在玉树集结准备，我军预计将在两周之后进入藏区作战。"
+  LFB_huabei.10.a:0"中国，统一而不可分割！"
   LFB_IF_TIB_war_tt:0"§R我们将会在一个月后向西藏发起进攻！§!"
-  LFB_huabei.11.t:0""
-  LFB_huabei.11.d:0""
-  LFB_huabei.11.a:0""
+  LFB_huabei.11.t:0"在进藏动员大会上的讲话（节选）"
+  LFB_huabei.11.d:0"“同志们！我听说，军中有人看不起西藏这块地方，但日本人、甚至印度人，都在千方百计地想把它搞出去。现在藏军就布防在通天河南岸和金沙江西岸，不把西藏拿回来，我们未来的国防边界就不是喜马拉雅山界，而是金沙江边，国土丧失百万平方公里，子孙后代都会骂我们啊！进藏确实苦，可是西藏人民世世代代在农奴主残酷压迫下，生活岂不更苦？人民解放军以解除人民痛苦为己任，我们怎能眼看他们受苦而无动于衷？”\n……\n“邓委员特地为我们题词，题词是这样写的：‘接受与完成党所给予的最艰苦任务,是每个共产党员每个革命军人无上的光荣’。这说明，中央非常重视进藏工作，因为藏区情况相当特殊。全军必须认真学习上级颁发的解放西藏的有关文件，行动上严格遵守三大纪律、八项注意和约法八章，尊重藏族同胞的风俗习惯,从思想上提高对政策的认识,理解民族平等、民族团结的重要性。而我们作为进藏的先遣军，必须发挥好模范作用！”\n……\n“干部要带起带头作用，所有的人思想都要通，要高高兴兴地去西藏！”"
+  LFB_huabei.11.a:0"将革命的红旗插到祖国的最高峰上！
 
 
 
