平衡性调整/BUG修复
-修正了部分本地化不显示的问题
-调整了IF线兰州内容的铁路建设决议
-为西北抗日阵线增加了一些生产单位
-调整了开局的补给节点
-增加了一些工具提示

--- a/localisation/english/LFB_new_unsorted_l_english.yml
+++ b/localisation/english/LFB_new_unsorted_l_english.yml
@@ -97,8 +97,8 @@
   COX_SEE_army_tt:0 "This will slightly increase our infiltration into the Northwestern Army!"
   COX_XIN_QIN_ROAD:0 "Repair the New Qing Road"
   COX_XIN_QIN_ROAD_tt:0 "This will greatly increase our integration of the two regions!"
-  COX_XIN_QIN_RIL:0 "Build the Xining-Urumqi Railway"
-  COX_XIN_QIN_RIL_tt:0 "This will greatly increase our integration of the two regions!"
+  COX_XIN_GAN_RIL:0 "Build the Xining-Urumqi Railway"
+  COX_XIN_GAN_RIL_tt:0 "This will greatly increase our integration of the two regions!"
   COX_assassinate_officers:0"Assassinate Japanese Officers"
   COX_assassinate_officers_tt:0"This will effectively damage the morale of the Japanese army, but such aggressive actions will reduce our infiltration."
   COX_Reorganize_army:0 "Reorganize the Army"
