--- a/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
@@ -57,7 +57,7 @@
   LFB_COX_wi.1.t:0"西南之声"
   LFB_COX_wi.1.d:0"最开始只是一串旧电码，一段杂音，一段意义不明的呼号。但很快，新疆临时组织起的情报部门反复确认比对，从泛黄的密码本中，他们辨识出了这样的信息——“我们，在西南，你们，是谁？”。敌人没有可能在二十年间仍对销声匿迹的地下党电台保持着监控，如果信号的对面是我们的同志，那么他们传达的讯号证明了一件事——仍有同志坚守在祖国西南。\n\n在之后的数月间，不断有电波往来与祖国的西北西南，对方确认了新疆与青海的现状，我们也知晓了对方的身份——对方竟然是抗战末期从延安南下的党中央余部，经历了二十年间不间断的围剿，他们顽强地在西南边境的丛林间生存下来，开辟了广大的农村革命根据地。\n\n虽然相比于我们在西北取得的成就要逊色许多，但党中央依然坚守的消息仍令许多同志感到心安。在交流之中，他们提及了风云激荡的西南局势，似乎一场壮烈的斗争即将拉开序幕……"
   LFB_COX_wi.1.a:0"知道了"
-  LFB_COX_wi.2.t:0"统一阵线再立"
+  LFB_COX_wi.2.t:"统一阵线再立"
   LFB_COX_wi.2.d:0"起初，当护国军携整个西南的抵抗力量，向国民政府的腹地发起总攻时，没人认为他们能成功。直到云南的电台将武汉解放的消息广播至全国，身处内地的地下党接头人送来了西南中央的捷报，西北的共产党才初步相信了这个不可思议的结论——\n\n西南起义已取得初步成功，烈火已成燎原之势。而伪政府的残余，此时正在日本的援助下，拼命坚守东南沿海，与护国军对峙。\n\n此时，在乌鲁木齐与西宁，干部们早已守在了无线电旁，仔细地聆听着护国军组织的战况播报。当听到护国军拼死血战，在反复拉锯后，终于登上了武汉城头，不少老兵与干部们落下了数十年未曾流过的泪——多年以来，他们的身心已被粗粝的北风锤炼得无比刚强，但如今响彻大江南北的冲锋号声，还是吹进了他们心中柔软的角落。\n\n身处乌鲁木齐的毛岸英很快抑制住了激动的情绪，他竭力压制住自己颤抖的声音，朗声说到： “同志们……同志们！南方的同志们再次实现了不可能之事，他们解放了武汉，与日本的傀儡政权分庭抗礼。但毫无疑问，日本帝国主义不会对此无动于衷。此时此刻，护国军行的每一步，都建立在千万牺牲之上，他们独木难支……”\n\n “……美国人常说，日本帝国主义是一只盘踞在东亚的猛虎，但我要说，它不过是一只表面张牙舞爪的纸老虎。这是护国军证明了的，现在全国的抗日热情已是二十年来的最高潮，我们就要与这只纸老虎碰一碰，把它戳穿，把它撕碎，又有何妨？”\n\n毛岸英激情的演说引起了台下的一阵欢呼，在喜悦的氛围中，乌鲁木齐苏维埃全票通过了进行全面战备的动议。\n\n 西宁城中，刘少奇平静地说道，“…….我们曾在兰州遭到了惨败，深知日军的残虐不是伪政府的军警可以比拟的，此时若不能团结全国一切抗日的力量，恐怕护国军终将独木难支……”\n\n“……我知道，有的同志害怕主动出击，觉得一旦失败，就是下一个1952，下一次屠杀。但很多同志其实搞错了因果，我们能存续至今，归根到底是因为老百姓的支持，老百姓支持共产党，归根到底是因为我们承诺会赶走日本鬼子。我们等了二十年，如今机会终于来了，如果共产党此时不挺身而出，老百姓还会支持我们吗？”\n\n第二天，西宁临时人民政府就下达了重整武装，严密监视兰州方向日军动向的命令。"
   LFB_COX_wi.2.a:0"四万万同胞且待，看长风更起，催我出征。"
   LFB_COX_wi.3.t:0"西北平定"
@@ -66,9 +66,10 @@
   LFB_COX_wi.4.t:0"西北抗日阵线成立"
   LFB_COX_wi.4.d:0"没有繁杂的仪式，没有掌声与喝彩，仅凭着几条道路的整修，青海与新疆就紧密的联系在了一起。从吐鲁番到西宁，在工厂与前线之间，洋溢着怒火与复仇的喜悦。横亘三千公里，地广人稀的西北内陆，孕育着语言不同，风俗迥异的人们。但尽管形式不同，日本帝国主义的压迫对每个人而言都如此刻骨铭心，以至于轻易弭平了民族间的沟壑，暂时令各个敌对阶级团结一心。"
   LFB_COX_wi.4.a:0"无论如何，我们团结一致，气吞山河！"
+  LFB_IF_start_tt:"我们将会进入紧急战备状态，获得额外的生产单位与正面修正"
   LFB_COX_wi.5.t:0"宜将剩勇追穷寇"
   LFB_COX_wi.5.d:0"长官：\n\n在最新一次前出侦察中，我们发现盘踞在兰州的鬼子又有了异动。那里的岗哨相较之前又减少了许多，巡逻队也不见了踪迹，我们得以几乎不受阻碍地进抵兰州近郊——鬼子似乎把全部的兵力都堆到了城里。坦克，大炮，每条街上都站满了歪歪扭扭的士兵。兵力如此集中，戒备却这么松弛，看来鬼子不是要进攻，而是准备撤退了！\n\n鉴于如今风雨欲来的形势，西北局的同志们一致同意这位侦察兵的判断，我们必须联合现在兰州附近的游击力量，在辻政信落荒而逃前将他的疯狂埋葬在西北！"
-  LFB_COX_wi.5.a:0毕其功于一役！"
+  LFB_COX_wi.5.a:0"毕其功于一役！"
   LFB_COX_nc.1.t:0"地形之利"
   LFB_COX_nc.1.d:0".“王队长，这该咋办？”看着远处坐着卡车赶来的大队日本士兵，小梁一脸疑惑地看向趴在旁边、压低身子的队长。\n\n一边摸索着衣兜里的香烟，王易淡然地答道：“看着就好了，鬼子们还觉着兰州附近是安全区呢，咱今天就要让他们好好喝一壶。”他的眼睛紧盯着前方的卡车，日本兵正有说有笑地点起香烟，好像在比拼谁抽的更快。\n\n“小梁啊，上次缴的烟还有货吗？这回定能再缴不少。”谈笑间，排头的车碾过了第二片雷区。小梁咽了咽口水，只见队长拉动拉线。“轰”的一声，那辆卡车变成了一颗大火球，车上的鬼子连惨叫都没来得及发出。只剩下了几顶钢盔被炸向空中，旋转了几周后砸在路上，冒着青烟。\n\n后面的日军马上反应了过来，有地雷！赶忙刹车，所有士兵立刻下车。最前面卡车燃烧着的残骸挡住了路，他们自然只能徒步。小梁清晰地看到，几个排雷兵已经背好探测仪，手里拿着探测器，成平行队列沿路进行探测工作了。他们的身后，约一个大队的士兵已经列队完毕，正慢慢跟在排雷兵后面缓慢推进。\n\n“鬼子真是蠢笨，都不知道咱的土造地雷，其实一点金属都没。”队长又拉动了另外两根拉线，为了招呼这些排雷兵，这最后铺的几枚地雷里的装药都是特地从西宁运来的。一阵硝烟过后，先头的排雷兵化为了一阵血雾。趁日军错愕之际，王易一口气拉响了数颗炸弹，将队尾的数辆车炸了个底朝天。断肢与血液四溅，硝烟与柴油燃烧的焦糊味弥漫在整个山谷，此地已经彻底化为了一个屠宰场。\n\n“对面还剩几十个人，王队长，接下来怎么办？”\n\n“老子早就把兰州周边都摸透了，爆炸声根本传不出这个山坳坳，城里的鬼子根本不会知道这儿发生了什么。”边说着，王易娴熟地给自己的老枪挂上了匕首，“咱也要让鬼子尝尝，被挑在枪头究竟是什么滋味…….”"
   LFB_COX_nc.1.a:0"全体上刺刀，准备进攻！"
@@ -135,6 +136,7 @@
   COX_Liberation_of_Lanzhou_invaded_Jap:0 "…时不再来"
   COX_Liberation_of_Lanzhou_invaded_Jap_desc:0 "就在红军开进兰州的同时，西北军也在执行着他们的撤退计划。如果我们未能在一定时间内将他们切断，就会彻底失去这一歼灭敌军一大主力的机会。"
   COX_relation_army_old_ma:0 "联络马家残部"
+  COX_coring_lanzhou_tt:0 "我们正在重建兰州"
   COX_relation_army_old_ma_tt:0 "这将降低我们在西北军渗透的衰减。"
   COX_help_army_anti:0 "援助游击队"
   COX_help_army_anti_tt:0 "这将降低我们在西北军渗透的衰减。！"
@@ -143,9 +145,11 @@
   COX_SEE_army:0 "前出侦察"
   COX_SEE_army_tt:0 "这将小幅增加我们对于西北军的渗透！"
   COX_XIN_QIN_ROAD:0 "整修新青公路"
-  COX_XIN_QIN_ROAD_tt:0 "这将大幅增加我们对两地区的整合！"
-  COX_XIN_QIN_RIL:0 "修建西宁-乌鲁木齐铁路"
-  COX_XIN_QIN_RIL_tt:0 "这将大幅增加我们对两地区的整合！"
+  COX_XIN_QIN_ROAD_tt:0 "这将小幅增加我们对两地区的整合！"
+  COX_XIN_QIN_RIL:0 "修建新青铁路"
+  COX_XIN_QIN_RIL_tt:0 "修建一条从乌鲁木齐到西宁的铁路\n这将小幅增加我们对两地区的整合！"
+  COX_XIN_GAN_RIL:0 "链接兰州-乌鲁木齐"
+  COX_XIN_GAN_RIL_tt:0 "我们将会彻底完成兰新铁路的建设\n这将大幅增加我们对两地区的整合！"
   COX_assassinate_officers:0"刺杀日军军官"
   COX_assassinate_officers_tt:0"这将有效打击日军的士气，但如此激进的行动会降低我方渗透"
   COX_Reorganize_army:0 "整编军队"
