--- a/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
@@ -247,11 +247,11 @@
   LFB_huabei.9.a:0"中国，统一而不可分割！"
   LFB_IF_TIB_peace_tt:0"§G西藏回归了祖国的怀抱。§!"
   LFB_huabei.10.t:0"准备解放西藏"
-  LFB_huabei.10.d:0"随着解放战争的进行，经过中央以及前委对如今形势的研判，一致认为现在正是进军西藏、武力解放藏区的最好时机；尤其要赶在国民党反动派，之前对西藏施加有效的影响。\n\n先行部队、物资等已开始在玉树集结准备，我军预计将在两周之后进入藏区作战。"
+  LFB_huabei.10.d:0"随着解放战争的进行，经过中央以及前委对如今形势的研判，一致认为现在正是进军西藏、武力解放藏区的最好时机；尤其要赶在国民党反动派之前，对西藏施加有效的影响。\n\n先行部队、物资等已开始在玉树集结准备，我军预计将在两周之后进入藏区作战。"
   LFB_huabei.10.a:0"中国，统一而不可分割！"
   LFB_IF_TIB_war_tt:0"§R我们将会在一个月后向西藏发起进攻！§!"
   LFB_huabei.11.t:0"在进藏动员大会上的讲话（节选）"
-  LFB_huabei.11.d:0"“同志们！我听说，军中有人看不起西藏这块地方，但日本人、甚至印度人，都在千方百计地想把它搞出去。现在藏军就布防在通天河南岸和金沙江西岸，不把西藏拿回来，我们未来的国防边界就不是喜马拉雅山界，而是金沙江边，国土丧失百万平方公里，子孙后代都会骂我们啊！进藏确实苦，可是西藏人民世世代代在农奴主残酷压迫下，生活岂不更苦？人民解放军以解除人民痛苦为己任，我们怎能眼看他们受苦而无动于衷？”\n……\n“邓委员特地为我们题词，题词是这样写的：‘接受与完成党所给予的最艰苦任务,是每个共产党员每个革命军人无上的光荣’。这说明，中央非常重视进藏工作，因为藏区情况相当特殊。全军必须认真学习上级颁发的解放西藏的有关文件，行动上严格遵守三大纪律、八项注意和约法八章，尊重藏族同胞的风俗习惯,从思想上提高对政策的认识,理解民族平等、民族团结的重要性。而我们作为进藏的先遣军，必须发挥好模范作用！”\n……\n“干部要带起带头作用，所有的人思想都要通，要高高兴兴地去西藏！”"
+  LFB_huabei.11.d:0"“同志们！我听说，军中有人看不起西藏这块地方，但日本人，甚至是印度人，都在千方百计地想把它搞出去。现在藏军就布防在通天河南岸和金沙江西岸，不把西藏拿回来，我们未来的国防边界就不是喜马拉雅山界，而是金沙江边，国土丧失百万平方公里，子孙后代都会骂我们啊！进藏确实苦，可是西藏人民世世代代在农奴主残酷压迫下，生活岂不更苦？人民解放军以解除人民痛苦为己任，我们怎能眼看他们受苦而无动于衷？”\n……\n“邓委员特地为我们题词，题词是这样写的：‘接受与完成党所给予的最艰苦任务,是每个共产党员每个革命军人无上的光荣’。这说明，中央非常重视进藏工作，因为藏区情况相当特殊。全军必须认真学习上级颁发的解放西藏的有关文件，行动上严格遵守三大纪律、八项注意和约法八章，尊重藏族同胞的风俗习惯,从思想上提高对政策的认识,理解民族平等、民族团结的重要性。而我们作为进藏的先遣军，必须发挥好模范作用！”\n……\n“干部要带起带头作用，所有的人思想都要通，要高高兴兴地去西藏！”"
   LFB_huabei.11.a:0"将革命的红旗插到祖国的最高峰上！
 
 
