增加本地化 -为“进军华北”国策添加了工具提示，提示玩家需要通过该国策解锁华北GUI中的特殊行动

--- a/localisation/simp_chinese/LFB_national_focuses_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_national_focuses_l_simp_chinese.yml
@@ -294,6 +294,7 @@
 	COX_March_Towards_Shanxi_desc: "全国的局势随着护国军起义的成功形成了连锁反应——日本徒劳的试图在华北维系他们所谓的“秩序”，却只带来了混乱。如今，侵略者与卖国贼在山西筑起了桥头堡，试图将我们阻隔在黄河对岸。但中国人民的决心将不可阻挡！\n\n风在吼，马在叫\n\n黄河在咆哮！"
 	COX_March_Towards_North_China: "挺进华北"
 	COX_March_Towards_North_China_desc: "在统一战线的竭力合作之中，在全国民众的盛怒之下，日本帝国为之自傲的陆军只得节节败退。现在，华北就在红军的面前。北平——这座蒙尘已久的北方古都，现在已经沦为了汉奸们盘踞的最后据点，他们还策划着阴谋，指望向日本主子出卖更多的权益，可以换取自身的存续。\n\n但日本的溃败已成定局，我们应抓紧时机，进军北平，将汉奸卖国贼的阴谋砸个粉碎！自由的中国万岁！"
+	COX_NC_decision_unlock_tt: "我们将能够在华北执行特殊行动，巩固我们对解放区的控制。"
 	COX_National_Protection_Army_In_Nanjing: "南京的护国军"
 	COX_National_Protection_Army_In_Nanjing_desc: "就在我军在西北发起攻势的同时，护国军的军人正在广州与长江沿岸集结，准备与日寇展开最后的决战。虽然在护国军中，也有为数不少的共产党员，双方的高层也通过西南党中央的斡旋，有过几次交流，但两军毕竟山水相隔，战士们都素未谋面，能否在两线配合作战，能否避免在日后的冲突，都是未知数。\n\n弱小的中国若想战胜强敌，就必须摒弃一切嫌隙，通力合作。\n\n我们应当派出正式的代表前往南京，共襄抗日复国之大业，也让中国，乃至全东亚的人民知道：国共两党的再一次合作，必将结成整个民族的坚墙。"
 	COX_Experience_Of_National_Protection_Army: "他们的经验"
