IF线解放战争修复 -为COX和YUN的战胜创建了脚本合约 -中国共产党-新疆局在战胜之后会被命名为中国共产党

--- a/localisation/simp_chinese/COX_ideologies_l_simp_chinese.yml
+++ b/localisation/simp_chinese/COX_ideologies_l_simp_chinese.yml
@@ -9,3 +9,6 @@
 
  COX_communist_party_XIN_long:"中国共产党 - 新疆局"
  COX_communist_party_XIN:"中国共产党 - 新疆局"
+
+ COX_communist_party_PRC_long:"中国共产党"
+ COX_communist_party_PRC:"中国共产党"
