BUG修复（？） -或许解决了结束界面图片不显示的问题？我不知道

--- a/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
@@ -263,17 +263,17 @@
   SHX_occupied_ultranationalism_party_long:"华北第20军"
   SHX_occupied_ultranationalism_party:"华北第20军"
   #结语
-  TNO_CountryClosing_epilogue_COX:0:"至此，新疆苏维埃政府的故事便暂告一段落。农业与工业的体系已经基本完善，军阀和流寇的影响也已清扫干净。农民和工人无比拥护这支自贝加尔湖归来的红军，红日再一次照耀在这片大地上。地方宗教势力和别派人士也暂时被收拢在了抗日民族统一战线之中。于情于理，这些都是好事。但，内部问题解决了，外部却仍风云变幻：西方，哈萨克斯坦统一战争正摩拳擦掌；北方，俄罗斯大地上第一批有希望统一的军阀正勾心斗角，他们对我们的态度尚不可知；东北，蒙疆伪政府的领导者亲王也岌岌可危；南方，高山之国依然与世隔绝。他们是敌人，还是可以团结的朋友？犹未可知。而在极东，旭日帝国已经注意到这颗闪烁的红星。它会心血来潮，吹灭这粒火星；抑或视而不见，直至“共荣圈”被人民战争的烈火焚烧殆尽？敬请等待下个版本更新吧。"
+  TNO_CountryClosing_epilogue_COX:0"至此，新疆苏维埃政府的故事便暂告一段落。农业与工业的体系已经基本完善，军阀和流寇的影响也已清扫干净。农民和工人无比拥护这支自贝加尔湖归来的红军，红日再一次照耀在这片大地上。地方宗教势力和别派人士也暂时被收拢在了抗日民族统一战线之中。于情于理，这些都是好事。但，内部问题解决了，外部却仍风云变幻：西方，哈萨克斯坦统一战争正摩拳擦掌；北方，俄罗斯大地上第一批有希望统一的军阀正勾心斗角，他们对我们的态度尚不可知；东北，蒙疆伪政府的领导者亲王也岌岌可危；南方，高山之国依然与世隔绝。他们是敌人，还是可以团结的朋友？犹未可知。而在极东，旭日帝国已经注意到这颗闪烁的红星。它会心血来潮，吹灭这粒火星；抑或视而不见，直至“共荣圈”被人民战争的烈火焚烧殆尽？敬请等待下个版本更新吧。"
   TNO_CountryClosing_epilogue_COX:1"新疆革命胜利、土地改革成功、根据地建设热火朝天...事情的顺利远远超出了毛岸英的想象。革命看起来一帆风顺，全中国的革命蓝图似乎也清晰了——果真如此么？\n\n未必。边区仍困于无边黄沙，马匪们日夜不休侵扰边境....更遑论在边区东方，还有一支旭日帝国的精锐在等着红军指战员们。\n\n来自贝加尔湖的光要照耀这片久经创伤的土地，仍然任重而道远。对现在的中国而言，中国旅为西北带来的这缕星光虽然微弱，但弥足珍贵。要掀翻这可笑的新秩序，共产党就必须向大地深处扎根，直到能够掀翻这片土地将所有寄生虫压在脚下，直到那颗在地平线上若隐若现的红星能真正照耀中国。""
   
   TNO_CountryClosing_left_title_XBJ_early_ending:""
   TNO_CountryClosing_epilogue_XBJ_early_ending:"旷野之上，刘少奇正沉思着。而在他面前的，赫然是部队打扫完战场之后，堆起来的红军士兵尸体。\n向远方眺望，兰州城楼上，鲜红的旭日旗依旧飘扬。与预期的一鼓作气解放兰州不同，主攻兰州的部队被铺天盖地的炮火与炸弹淹没，再无法前进一步。红军与日军之间的差距，远不是抗日救国的决心能弥补的。面前的兰州犹如天堑，不知如何是好。\n而在西南，龙云发起了声势浩大的护国运动，誓要将中国从旭日的镣铐下解放，东亚维持了20年的表面和平终被打破。可西南的战局仍不明朗…仅凭云贵两省，真的可以敌的过装备精良训练有素的伪民国军队吗？\n\n不过，对于坐镇乌鲁木齐的毛岸英来说，属于他的万里长征才刚刚开始……"
   
   TNO_CountryClosing_left_title_COX_IF_defeated_ending:"出师未捷身先死\n长使人民泪满襟"
-  TNO_CountryClosing_epilogue_COX_IF_defeated_ending:"终究，一切以失败落幕。贝加尔湖畔灯塔的微光撕破了层层迷雾，但航船终是搁浅一旁。一切又回到了原点，似乎什么东西都没有改变，在这片苦难之地上，到处都是弥漫的哀伤与绝望。\n\n但是，当春风裹着北还的飞鸟，春雷倏地炸响，焦黑的华北平原上，也总是要开出新芽。自然仍依着它的规律，噤着声，不断向前发展，奔波不息。中国共产党几十年的努力，中华民族几十年间承受之苦难，其壮烈的爆发，终究没能冲开历史的迷雾，人民战争的思想似乎已经被扫进历史垃圾堆。\n\n但是，在边疆，农村与城市，在一切不起眼的角落，星火仍存…只要人民还在承受苦难，只要日寇还在耀武扬威，反抗的火焰就不会熄灭。若不信的话，你看吧！看那黄土高原之上，看那横断山脉之中，看那高筑起的街垒，看那终将自由的人民！\n\n70年代的曙光已经浮现，中国人民仍被束缚于日本帝国主义的压迫之中，他们虽在历史中行了弯路，但终将摆脱一切苦难与耻辱，开辟解放的未来！"
+  TNO_CountryClosing_epilogue_COX_IF_defeated_ending:"终究，一切以失败落幕。贝加尔湖畔灯塔的微光撕破了层层迷雾，但航船终是搁浅一旁。一切又回到了原点，似乎什么东西都没有改变，这片苦难之地上弥漫着哀伤与绝望。\n\n但是，当春风裹着北还的飞鸟，春雷倏地炸响，焦黑的华北平原上，也总是要开出新芽。自然仍依着它的规律，噤着声，不断向前发展，奔波不息。中国共产党几十年的努力，中华民族几十年间承受之苦难，其壮烈的爆发，终究没能冲开历史的迷雾，人民战争的思想似乎已经被扫进历史垃圾堆。\n\n但是，在边疆，农村与城市，在一切不起眼的角落，星火仍存…只要人民还在承受苦难，只要日寇还在耀武扬威，反抗的火焰就不会熄灭。若不信的话，你看吧！看那黄土高原之上，看那横断山脉之中，看那高筑起的街垒，看那终将自由的人民！\n\n70年代的曙光已经浮现，中国人民仍被束缚于日本帝国主义的压迫之中，他们虽在历史中行了弯路，但终将摆脱一切苦难与耻辱，开辟解放的未来！"
 
   TNO_CountryClosing_left_title_COX_IF_UG_ending:"五十年来天地改\n浑如一梦下荆州"
-  TNO_CountryClosing_epilogue_IF_UG_ending:"在长达百年的蹂躏过后，中国终于又重新站了起来，拥抱久别的自由。国共两党再次同心协力，打碎了日本帝国主义施加的重重锁链；大江南北的人民砥砺共进，终于争得了解放。\n\n双方在战场上团结一致的友谊，似乎也延续到了战后。新的联合政府已经组建，压迫在中国人民头上的一座大山已被铲平，而两党间即便存在分歧，也能在合法的框架内解决，理论上来说，中华民族未来的康庄大道已经铺就……\n\n但这个新生之国，内部却有重重矛盾与隐忧——新组建的国民议会无时无刻不在激烈辩论，却仅能通过一些无关痛痒的法案，制宪会议已召开多次，却鲜有成效；双方的军队虽然已经统一番号，内部却仍是泾渭分明；而国共各自的控制区，面貌已宛如两个国家。尽管双方的领导人一再声明联合的必要，但他们也不能忽视自己党内的反对声音。\n\n70年代的曙光已经浮现，百折不挠的中国人民重新起身，跌跌撞撞着奔向自己的未来……"
+  TNO_CountryClosing_epilogue_COX_IF_UG_ending:"在长达百年的蹂躏过后，中国终于又重新站了起来，拥抱久别的自由。国共两党再次同心协力，打碎了日本帝国主义施加的重重锁链；大江南北的人民砥砺共进，终于争得了解放。\n\n双方在战场上团结一致的友谊，似乎也延续到了战后。新的联合政府已经组建，压迫在中国人民头上的一座大山已被铲平，而两党间即便存在分歧，也能在合法的框架内解决，理论上来说，中华民族未来的康庄大道已经铺就……\n\n但这个新生之国，内部却有重重矛盾与隐忧——新组建的国民议会无时无刻不在激烈辩论，却仅能通过一些无关痛痒的法案，制宪会议已召开多次，却鲜有成效；双方的军队虽然已经统一番号，内部却仍是泾渭分明；而国共各自的控制区，面貌已宛如两个国家。尽管双方的领导人一再声明联合的必要，但他们也不能忽视自己党内的反对声音。\n\n70年代的曙光已经浮现，百折不挠的中国人民重新起身，跌跌撞撞着奔向自己的未来……"
 
   TNO_CountryClosing_left_title_COX_IF_civ_war_ending:"拜罢黄垆闻笑语\n英雄人物看今朝"
   TNO_CountryClosing_epilogue_COX_IF_civ_war_ending:"在长达百年的蹂躏与紧接着的内战后，中国终于得以拥抱最终的和平与自由。由于对中国未来的描绘截然不同，国共和谈最终以破裂告终，大江南北，长城内外，再次被华夏男儿们的鲜血染红……好在，这一切最终得以尘埃落定，血腥的厮杀后，中国共产党成为了最后的赢家。\n 中国受奴役的历史结束了，但中国在废墟中崛起的历史才刚刚开始，在天安门城楼上，毛岸英庄严宣告了中华人民共和国的成立。但在劫后余生欢欣鼓舞的人民脚下，是三十年间饱受日本帝国主义剥削蹂躏，又被绵延不绝的战火摧残的土地。随着中国再度归属于一个大一统的政权，属于这个古老国家的新篇章正在徐徐开启……虽然前路漫长，荆棘密布，但党和人民终将攻坚克难，实现共产主义。\n\n70年代的曙光已经浮现，百折不挠的中国人民重新起身，揩干身上的血污，大踏步奔向自己的未来……"
