代码重构/本地化修正 -移除了部分无用文件 -修改/添加了共荣圈相关民族精神的本地化

--- a/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
@@ -277,7 +277,11 @@
 
   TNO_CountryClosing_left_title_COX_IF_civ_war_ending:"拜罢黄垆闻笑语\n英雄人物看今朝"
   TNO_CountryClosing_epilogue_COX_IF_civ_war_ending:"在长达百年的蹂躏与紧接着的内战后，中国终于得以拥抱最终的和平与自由。由于对中国未来的描绘截然不同，国共和谈最终以破裂告终，大江南北，长城内外，再次被华夏男儿们的鲜血染红……好在，这一切最终得以尘埃落定，血腥的厮杀后，中国共产党成为了最后的赢家。\n 中国受奴役的历史结束了，但中国在废墟中崛起的历史才刚刚开始，在天安门城楼上，毛岸英庄严宣告了中华人民共和国的成立。但在劫后余生欢欣鼓舞的人民脚下，是三十年间饱受日本帝国主义剥削蹂躏，又被绵延不绝的战火摧残的土地。随着中国再度归属于一个大一统的政权，属于这个古老国家的新篇章正在徐徐开启……虽然前路漫长，荆棘密布，但党和人民终将攻坚克难，实现共产主义。\n\n70年代的曙光已经浮现，百折不挠的中国人民重新起身，揩干身上的血污，大踏步奔向自己的未来……"
-
-
+  
+  JAP_puppet_no_war:"离心离德的共荣圈"
+  JAP_puppet_no_war_desc:"我们一直大力鼓吹共荣圈内部的团结协作，可当危机真正来临，我们的盟友和傀儡们却并未积极地维护“东亚共荣”。要么是被内部的冲突折磨得焦头烂额，要么是出于自身利益冷眼旁观，他们在这关键时刻并不愿为日本人而在东亚战场上流血。\n\n§R中国问题只能由我们独自解决了。§！"
+  JAP_sphere_no_war:"离心离德的共荣圈"
+  JAP_sphere_no_war_desc:"日本方面一直大力鼓吹共荣圈内部的团结协作，但考虑到当前局势，我们并不会积极地维护这所谓的“东亚共荣”。要么是被内部的冲突折磨得焦头烂额，要么是出于自身利益冷眼旁观，我们没有理由在这个节骨眼上为日本人而在东亚战场上流血。\n\n§R中国的问题就交给他们自己解决吧。§！"
+  
   MEA_communist_party_long:0"蒙古人民阵线"
   MEA_communist_party:0"蒙古人民阵线"
