--- a/localisation/simp_chinese/COX_defeated_cg_l_simp_chinese.yml
+++ b/localisation/simp_chinese/COX_defeated_cg_l_simp_chinese.yml
@@ -8,25 +8,31 @@
  GAN_win: "西北军政监"
  GAN_win_ADJ: "西北军政监"
  GAN_win_DEF: "西北"
+ CHI_dog_despotism_party: "国民党 - 新CC系"
+ CHI_dog_despotism_party_long: "中国国民党 - 新中央俱乐部"
+ NCC_dog_fascism_party: "国民党 - 华北政务委员会"
+ NCC_dog_fascism_party_long: "中国国民党 - 华北政务委员会"
+ YUN_dog_despotism_party: "国民党 - 黄埔系"
+ YUN_dog_despotism_party_long: "中国国民党 - 黄埔系"
+ YUN_dog_paternalism_party: "国民党 - 政学系"
+ YUN_dog_paternalism_party_long: "中国国民党 - 政学系"
+ SIC_ultranationalism_party: "日军"
+ SIC_ultranationalism_party_long: "大日本帝国陆军"
+ SIC_paternalism_party: "国民党 - 川系"
+ SIC_paternalism_party_long: "中国国民党 - 川系"
+ SIC_communist_party: "中共地下党"
+ SIC_communist_party_long: "中共中央南方局"
  COX_Wang_Zhen_desc: "“老骥伏枥”\n--------------\n革命再兴，革命陨落，期间不过数年岁月，尚不足以令雏鹰翱翔天际，却蹉跎了老骥的意志。但当社稷化为殷墟，希望早已泯灭之时，唯有一人横刀立马，伫立在北疆门户，捍卫着革命仅存的硕果。\n\n自1927年入党之时，王震就一直奋战在革命的前线，从赣南到陕北，从国民党到日本帝国主义——对待内外反⾰命之时，他从不心慈手软。在新疆苏维埃成立后，这匹刚烈的老马又怀着澎湃的激情，一手操持根据地的保卫工作。在他主导下，反革命的企图被挫败，无数妄想复辟的狂徒被就地正法。革命大潮之中，他就是那根中流砥柱。\n\n在第二次抗战陷入劣势之时，新疆各地的反革命又开始蠢蠢欲动起来。尽管人手不足，装备短缺，政治保卫局仍拼尽全力维系根据地的稳定。然而，随着苏区基层赖以生存的赤卫队在战争中消耗殆尽，封建势力迅速地在南疆卷土重来……在最后的时日里，日本轰炸了乌鲁木齐，几乎将之化为白地，新疆叛乱四起，群寇云集，党支离破碎…仅剩的革命者汇聚在北疆，在政治保卫局的组织下，恢复了群众基础深厚的北疆的稳定。\n\n在这场灾难中，党多年的经营毁于一旦。土改的成果被推翻，无数革命者献出了生命……但这⼀切远未结束，只要一息尚存，这匹年迈的骏马就要付出⼀切，与反革命拼个你死我活。"
+ QIN_Ma_Dunjing_desc: "X"
+ Fujita_Shigeru: "藤田茂"
+ GAN_Fujita_Shigeru_desc: "X"
+ ETR_Elihan_Tore_desc: "X"
  DCG.1.t: "大厦将倾"
  DCG.1.desc: "“南京民国政府中央社电：新总统今日宣布已经彻底剿灭云南暴动，国民革命军接下来的目标是西南重建以及戡乱西北，剿灭苏联流寇。相信在大东亚共荣圈的帮助下……\n\n毛岸英关掉了桌上的收音机，连日来关于西南的坏消息接连不断，护国军已经败退回云南，龙云生死不知，据说老将军已经病逝。至于西北，此刻亦说不上好……绵延的战乱耗尽了新生苏维埃政权的心力，磕磕绊绊开动的战争机器，难以在日军持续的轰炸与内部敌对分子的破坏下维持运转；但真正的危机来自苏维埃政权的仰仗——农村。随着一个又一个村庄中的赤卫队骨干被编入军中，投入前线，毛岸英清楚，革命政权的根基正遭到侵蚀，一度被压制的地主乡绅与教权势力，正蠢蠢欲动，时刻准备卷土重来……\n\n"主席同志"秘书员将毛岸英从连日的坏消息中拉出来，将从收发室新传来的文件放在了他的办公桌上。\n\n“本周结束训练编入正规军的预备役为三万一千四百三十二名，新征召人数为二万三千九百二十三名。”\n\n“本周各部队阵亡和失踪人数为一万六千二百零二名，XXX师、XXX师减员75%，目前番号暂留，剩余人员已被打散分配至其他作战单位。\n\n最下方则是签字，毛岸英咬着牙，盖下了红印章，这七万一千人的命运便由此确定：奔向民族解放的战场，九死一生。阴云压境，山雨欲来，但作为一个中国人，一个共产党员，怎能不抵抗而向帝国主义屈膝？拉开抽屉，毛岸英望向斯大林赠予的手枪……"
  DCG.1.a: "若到那时，我便是最后一人……"
  DCG.2.t: "悲歌"
  DCG.2.desc: "今天是昆明平常的一天，清晨的水汽还是笼罩着这座古城，街上还是一如既往地挤满了早起逛早市的人们，依然有在墙上张贴抗日宣传海报的工作人员。\n\n但在龙云的办公处，桌子上摆满了触目惊心的照片，显然是西北前线的记者冒死偷拍的：刘少奇等西北局领导人和中央领导人被吊在城门上，照片隐隐地沾上了些血迹，使得本就模糊的照片更添加了几分绝望。\n\n龙云在房间内来回踱步，但他还抱着最后一丝希望，也许这只是日本人的心理战，企图在心理上击垮统一战线。但是前线传回来的越来越多的情报表明，共产党在新疆的统治几近崩溃，位于青海的行政机构也遭到了大洗牌，越来越多的日军补给车队正在向内陆推进…护国军将面临四面楚歌的困境。\n\n但是，龙云清楚，毛岸英还没死，他仍有可能带着从俄罗斯的援兵从哪个地方冒出来…就像他突然出现那样。他只是失踪，而不是确证死亡，日本人和伪军还在满城搜捕他的踪影，牵连者不知其数。整日的集中屠杀和三光政策，以及新疆伊斯兰上层反动分子的愈发嚣张的行动，似乎正宣告着之前红军在这里所做的一切努力化为泡影。但无论如何，它都将成为一个故事，一个传说，鼓舞着这片土地上可能是明天出现，也可能永远都不会再出现的革命者。\n\n在新疆的喀什，有一部脍炙人口的史诗：《玛纳斯》，讲述了一个震撼人心的人民反侵略、反黑恶，争取自由和幸福的正义斗争故事。由于广为流传，在日军攻入克孜勒苏柯尔克孜当天便宣布将这部史诗封禁。但在当地人民的口口相传下，这个故事却有了一层新的含义：英雄玛纳斯头戴红星帽，身穿绿布衣，带领着手拿旌旗，眼神犀利的战士，鼓动和率领着当地人民，对日本侵略者发动猛烈的进攻和抗击，并最终将其驱逐出家园……\n\n端坐在办公室内，老将军顿觉四围的黑暗紧逼而来，无数的鲜血与牺牲，仍未能换来解放的硕果……可敬的人民啊，可悲的国家啊！曾经的口号与希冀，化作沉甸甸的石头，压上了老将军的肩，他知胜算渺茫……"
  DCG.2.a: "但他仍攥着年迈的手，抱定必胜的决心。"
- DCG.11.t: ""
- DCG.11.desc: ""
- DCG.11.a: ""
- DCG.12.t: ""
- DCG.12.desc: ""
- DCG.12.a: ""
- DCG.13.t: ""
- DCG.13.desc: ""
- DCG.13.a: ""
- DCG.21.t: ""
- DCG.21.desc: ""
- DCG.21.a: ""
  DCG.101.t: "在陕北..."
  DCG.101.desc: "“王顺西！数年间，你由榆林城向陕北的共匪偷运了大批粮食，三日前在交粮的路上被当场抓获。罪证确凿。陕西防共纠察大队依照暂行条例宣判你死刑！”刑场上，纠察队的大队长正拿着大喇叭，将面前五位”通共“的”罪犯“的罪行告知于旁边观看的老百姓。这般公开处刑，本是为了“杀鸡儆猴”，断绝红军存在的土壤。但此刻，台下的老百姓们只是仰着头，只有个别人攥紧了拳头。纠察大队长似乎将无言当作了恐吓起效的标志，继续朗声宣布道，“李步！你伙同共匪将本地金员外的200亩土地分给了泥腿子，经过金员外的举报和我们的核查，罪证确凿。陕西防共纠察大队依照暂行条例宣判你死刑！”\n\n五位中年男子被绳子捆着，跪在土墙前，头上套着麻袋，听着前方那个人喊着所谓的判决。王顺西听着围观人群的喧哗声逐渐停下来，心里回想起去年听说书人唱的武侠故事，每个好汉被训街时都会大喊“老子十八年后又会是一条好汉！”街上围观的百姓也会顺势叫一声好。\n\n“行刑队准备！”“举枪！”“瞄准！”“老子十八年……”“哒，哒，哒，哒，哒。”五声枪响传来，王顺西心头一紧，但疼痛的感觉却迟迟未到...莫非是那帮二鬼子打偏了——正当他如此思想着时，突然听到有人惊呼——“劫法场！”。百姓们慌乱奔逃，娴熟的脱离了火线。一阵噼里啪啦地枪响后，王顺西听到自己面前的几个伪军士兵倒地的闷声，也听到百姓们的喝彩，“是红军！”。\n\n“好汉，没事吧...”掏出匕首，划开罩在眼上的蒙布，红军战士关切地问道。“骇死俺了...还好同志们来了。”\n\n夕阳西斜，残阳遍撒黄土高原，战士们收缴了敌人的武器，与田间劳作着的乡亲们挥别。今天的闹剧对村人们的生活没有半点影响，在目之所及的未来，他们仍不得不继续祈活，忍受不公与压迫。但每当想起在旭日的阴影下，有一支军队仍在奋战，人们便会对未来多一分向往，添一分期盼……"
  DCG.101.a: "红军不会忘记！"
