--- a/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
@@ -262,6 +262,7 @@
   NCC_xu_liang_desc:0"徐良永远也不会想到，自己有一天居然能成为中华民国的真正掌权者，自从张作霖离开北京以来，中华民国的权力中心终于在一次回到了华北。自1941年以来，徐良就是改组政府中华北势力的最高代表，始终与权力中心保持着密切联系。这种联系与其说是中央给予的嘉奖，不如说是对华北派的怜悯。从那之后，往日里繁荣的北平一天天消沉下去，从旧日里权力的中心变成了华北的一个不重要的城市。“那是中国以前的首都”人们如此评论道。而南京和上海，作为新的经济政治中心慢慢吸引了越来越多的人。徐良将这一切视作对华北的抛弃。但是现在，再造民国的机会就在他眼前，他有机会将权力的中心再次回到华北。当然徐良也清楚，如果战争打输了，自己也难逃一死。不过整个共荣圈都已经全面介入了，还能有什么问题呢？"
   SHX_occupied_ultranationalism_party_long:"华北第20军"
   SHX_occupied_ultranationalism_party:"华北第20军"
+  SHX_Okiie_Usami:"宇佐美兴屋"
   #结语
   TNO_CountryClosing_epilogue_COX:0"至此，新疆苏维埃政府的故事便暂告一段落。农业与工业的体系已经基本完善，军阀和流寇的影响也已清扫干净。农民和工人无比拥护这支自贝加尔湖归来的红军，红日再一次照耀在这片大地上。地方宗教势力和别派人士也暂时被收拢在了抗日民族统一战线之中。于情于理，这些都是好事。但，内部问题解决了，外部却仍风云变幻：西方，哈萨克斯坦统一战争正摩拳擦掌；北方，俄罗斯大地上第一批有希望统一的军阀正勾心斗角，他们对我们的态度尚不可知；东北，蒙疆伪政府的领导者亲王也岌岌可危；南方，高山之国依然与世隔绝。他们是敌人，还是可以团结的朋友？犹未可知。而在极东，旭日帝国已经注意到这颗闪烁的红星。它会心血来潮，吹灭这粒火星；抑或视而不见，直至“共荣圈”被人民战争的烈火焚烧殆尽？敬请等待下个版本更新吧。"
   TNO_CountryClosing_epilogue_COX:1"新疆革命胜利、土地改革成功、根据地建设热火朝天...事情的顺利远远超出了毛岸英的想象。革命看起来一帆风顺，全中国的革命蓝图似乎也清晰了——果真如此么？\n\n未必。边区仍困于无边黄沙，马匪们日夜不休侵扰边境....更遑论在边区东方，还有一支旭日帝国的精锐在等着红军指战员们。\n\n来自贝加尔湖的光要照耀这片久经创伤的土地，仍然任重而道远。对现在的中国而言，中国旅为西北带来的这缕星光虽然微弱，但弥足珍贵。要掀翻这可笑的新秩序，共产党就必须向大地深处扎根，直到能够掀翻这片土地将所有寄生虫压在脚下，直到那颗在地平线上若隐若现的红星能真正照耀中国。""
