本地化修正/BUG修复 -补充了西北军相关国家精神的本地化 -修复了兰州渗透可以衰减成负数的问题

--- a/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
@@ -85,7 +85,7 @@
   
   LFB_COX_nc.18.t:0"跨过黄河"
   LFB_COX_nc.18.d:0"是夜将明之时，西北抗日阵线的一队侦察兵再度抵达了晋陕之交。靛蓝色的天穹下，漆黑的黄河无声地流淌，河水两岸并无灯火，清冷的空气几近让人窒息。敌人轰炸机的威胁，令他们只能抓住夜幕消逝前的短暂空隙，遍寻一座座老渡口，以供大部队通过。“这儿一个鬼子都没有。”黄河左岸的树林间鬼影憧憧，似乎只是夜风的把戏。\n\n“做准备吧。”老班长授意道。\n\n片刻之后，一颗照明弹如流星般高高升起，右岸密林中响起了枪声，侦察兵们引燃了炸药，巨响在宽阔的河上回荡……\n\n左岸突然亮起了数盏探照灯，日军徒劳地端起步枪机枪，朝着河面警戒着。按照已经校准的射角，几枚迫击炮弹落在了对岸的密林中，数声闷响后，连鸟雀都惊不出来——显而易见的是，如同数个月来的每一次袭扰一样，红军侦察兵早已经消失的无影无踪。日本兵早已被这样的骚扰弄得心烦意乱，警戒在半个小时后就解除了，士兵们解下装具，收起步枪，打算安心睡一觉。毕竟，红军每夜只来一次，在摸清这规律后，他们便在前半夜和衣入睡，等到敌人的“袭扰”结束后，便可以不受军官阻拦的睡个好觉了。此刻，黄河沿岸的大部分日军都放松了警惕，毕竟，大日本帝国已倾其所有在黄河筑成了牢不可破的大堤，每一处渡口都严加戒备，每一个据点都固若金汤……\n\n黎明十分，天边隐约响起隆隆炮响，宛如惊雷般的炮弹在右岸的日军营垒间精准地炸开。从睡梦中惊醒的士兵们匆忙来到黄河边，在金黄色的朝阳下，一叶叶小柯宛如洒在黄河中的项链，原来红军早已过了河！\n\n通过疲敌之策，红军突破了山西的第一道防线。"
-  LFB_COX_nc.18.a:0"a. 华北的门户就在我们眼前！"
+  LFB_COX_nc.18.a:0"华北的门户就在我们眼前！"
   ##已经完成的事件
   LFB_COX_nc.4.t:0"疯狗之死"
   LFB_COX_nc.4.d:0"£gezifu £gezifu 事情是怎么到这个地步的？整个西北方面军不知道，辻政信也不知道，几个月前，他还是这几十万平方公里土地的唯一主宰。转眼间，兰州和天水接连被攻克，整支西北方面军都被红军彻底包围。\n\n£gezifu £gezifu 等等？红军？\n\n£gezifu £gezifu 但是辻政信没时间想这些，他在中国军队彻底包围指挥部之前找到了一匹快马，头也不回地逃离了。\n\n£gezifu £gezifu “等到我回到东京，我一定要说服军部再给我一支军队，然后再次回到西北！ 再杀一遍！”\n\n£gezifu £gezifu 长途的骑行和滴水未进使得这个六十二岁的老人逐渐体力不支，他的精神逐渐模糊，他的四肢慢慢无力。\n\n£gezifu £gezifu “难道上天真的要亡我于此？”\n\n£gezifu £gezifu 终于，他本能地将马匹的速度降了下来，然后竭尽全力让自己坐在马上。\n\n£gezifu £gezifu “呼，呼，我只需要…休息一会…”\n\n£gezifu £gezifu 他再次醒来时，发现自己的床边围着全村的人，所有人都盯着他，辻政信见过这种眼神，在菲律宾，一个濒死的美国战俘曾经这样看着他\n\n£gezifu £gezifu 辻政信故作镇定地从床上爬起，然后慢慢向村子外面走去，人群中自动让出一条道路。\n\n£gezifu £gezifu 他走出了屋子，一开始是走着的，然后慢慢变成跑步，最后几乎是竭尽全力地跑。\n\n£gezifu £gezifu 土枪，菜刀，锄头，剪刀，都跟在后面。\n\n£gezifu £gezifu 好像是天注定的，辻政信被一块石头绊倒，他很快地翻过身来，恐惧地看着一张张如黄土般的面庞，这些人中，他一个也不认识，但是他们认识他。\n\n£gezifu £gezifu “したくない！ したくない！ 助けて！”（不！不！救救我啊！）"
@@ -164,6 +164,13 @@
   COX_rebuild_Lanzhou_industry_tt:0"这将增加我们对两地区的整合！"
   COX_help_army_anti_trigger_tt:0"已经与马家军残部建立了联系"
   COX_Anti_sweep_trigger_tt:0"已经对当地游击队实施了援助"
+  complete_lanzhou_rebuild:0"完成兰州重建"
+  COX_GAN_lose_supply_countdown:0"西北军正在失去补给"
+  COX_GAN_gain_supply_countdown:0"西北军正在重建补给线"
+  Supply_lines_Broken_idea:0"断裂的补给线"
+  Supply_lines_Broken_desc:"每天，一箱箱产自日本帝国的先进武器被装上渡轮，飘洋过海抵达中国。它们本应被装载到火车，卡车，甚至是畜力车之上，穿越层层阻碍来到西北战斗的最前线————可现实并非如此。月台迎不来满载军备的火车，公路上的车队频频离奇失踪，保护补给线的士兵们也在不知不觉间人间蒸发：我们现在与赖以维生的后方失去了联系。"
+  GAN_infiltrated:"遭到渗透"
+  GAN_infiltrated_desc:"抵抗的火焰在一度陷入沉默的乡间再度燃起，军队在各地设下的封锁几乎形同虚设，就连受到密切监视的城市中也时不时响起密谋的低语：共匪的诡计给我们造成了不小的麻烦......甚至可能会导致我们的灭亡。"
   COX_lanzhou_core_trigger_tt:0"整合度达到§G100§!"
   COX_lanzhou_core_effect_tt:0"我们将会完成对兰州的整合！"
 
@@ -238,6 +245,7 @@
   COX_MEN_logistics_support:0"后勤支援"
   COX_MEN_logistics_support_avaliable_tt:0"这一决议还未执行过五次"
   COX_MEN_logistics_support_tt:0"蒙人阵§Y做出准备的速率§!将会提升"
+  
 
   #IF线战后内容
   COX_Nanjing_Negotiations_tt:0"§z南京§!§x谈判§!将会决定中国的命运！"
