内容调整/本地化修复/文件重构 -调整了COX的颜色 -调整了COX部分国策的数值 -为MEA补充了旗帜 -事件本地化修正

--- a/localisation/simp_chinese/LFB_national_focuses_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_national_focuses_l_simp_chinese.yml
@@ -179,6 +179,7 @@
 	COX_Red_Joint_Military_Exercise: "红军联合演习"
 	COX_Red_Joint_Military_Exercise_desc: "红军联合演习"
 	COX_The_Red_Corridor_Of_The_Northwest: "西北的红色走廊"
+	COX_The_Red_Corridor_Of_The_Northwest_tt: "§G小幅提高§!每月的§Y经济§!和§Y军事§!政策落实率变化。"
 	COX_The_Red_Corridor_Of_The_Northwest_desc: "随着与外西北诸同志们的联系愈加深化，新生的苏区接收了部分苏联的遗产，而本是一盘散沙的俄罗斯军阀似乎也有了重新聚合的趋势。虽然中亚诸势力间仍存在着深刻的意识形态分歧与民族矛盾，但我们已经迈出了区域合作的第一步。\n有朝一日，亚洲中部将重新燃起革命的星星之火，届时，新疆必将作为革命的枢纽，奋战在抵抗帝国主义的前线！"
 	COX_Neighborhood_In_Fire: "邻家起火"
 	COX_Neighborhood_In_Fire_desc: "据边防部队报告，最近越来越多难民模样的人穿过马家军和我们的边界来到新疆。这种情况值得我们格外警觉。\n\n近年来日军与马家关系逐渐恶化，西北军对马家地界的侵扰时有发生。而马家军以抗日救亡为名的横征暴敛进一步激化了各种矛盾，逃往新疆的难民数量日渐增长已成常态。\n\n但最近的逃难潮已经到了不能忽视的地步。这暗示了一个令人担忧的事实——马家政权未能成功凝聚民力抵抗日寇，反而正在逐渐失去对各地的控制。\n\n毫无疑问，一旦日军的铁蹄踏足新疆边境，那一切都将暴露在旭日的阴影下。\n\n§R我们必须开始行动了§!。"
