BUG修复/代码重构/内容修正 -为DMN添加了非军事区 -修复了添加小型旗帜会导致闪退的问题 -补全了中型和小型旗帜的图像资源 -重构了部分代码，删除了部分无用素材

--- a/localisation/english/COX_huabei_attack_GUI_l_english.yml
+++ b/localisation/english/COX_huabei_attack_GUI_l_english.yml
@@ -290,7 +290,7 @@ DMN_fascism_party: "Remnants of Manchukuo Institutions"
 DMN_fascism_party_long: "Remnants of Manchukuo Institutions"
 DMN_communist_party: "Communist Party of China - Northeast Bureau"
 DMN_communist_party_long: "Communist Party of China - Northeast Bureau"
-tengtianmao: "Fujita Shigeru"
+Shigeru_Fujita: "Fujita Shigeru"
 pujie1: "Aisin Gioro Pujie"
 pujie2: "Aisin Gioro Pujie"
 COX_idea_huabei_17: "Scatter Like Birds and Beasts"
