--- a/localisation/simp_chinese/COX_huabei_attack_GUI_l_simp_chinese.yml
+++ b/localisation/simp_chinese/COX_huabei_attack_GUI_l_simp_chinese.yml
@@ -360,9 +360,8 @@ DMN_fascism_party: "满洲国各地残余机构"
 DMN_fascism_party_long: "满洲国各地残余机构"
 DMN_communist_party: "中国共产党 - 东北局"
 DMN_communist_party_long: "中国共产党 - 东北局"
-tengtianmao: "藤田茂"
-pujie1: "爱新觉罗·溥杰"
-pujie2: "爱新觉罗·溥杰"
+Shigeru_Fujita: "藤田茂"
+DMN_pujie: "爱新觉罗·溥杰"
 COX_idea_huabei_17: "作鸟兽散"
 COX_idea_huabei_18: "往日之影"
 
