内容添加/本地化修正 -增加了顶部警告的基础支持 -增加了西北危机工作组可用的警告 -略微修正了IF线兰州阶段开始时的本地化

--- a/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
@@ -298,3 +298,7 @@
 
   MEA_communist_party_long:0"蒙古人民阵线"
   MEA_communist_party:0"蒙古人民阵线"
+
+  ##顶端警报
+  Alert_XBJ_Work_Group_Avaliable: "有可用§Y工作组§!"
+  Alert_XBJ_Work_Group_Avaliable_Desc: "我们可以在西北危机中派遣空闲的§Y工作组§!！"
