战胜结语添加/本地化修正/bug修正 -添加了IF线和初始阶段的一些战胜结语和风味文本 -修复了王震的本地化和头像显示异常的问题 -修正了IF线某些文本和实际游戏情况不符的问题 -为某些战争添加了全局标记

--- a/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
@@ -108,7 +108,7 @@
   LFB_COX_nc.9.d:"£gezifu £gezifu “我再给你们五分钟时间，马上投降，不然我这五门炮就要开炮啦！”五门步兵炮黑漆漆的炮管正对着不远处的炮楼。\n\n£gezifu £gezifu 炮楼内，五十几个伪军士兵正聚在排长旁边，“要不咱们还是降了吧。”几个大头兵在人群后面叫着，大家伙身上都背着枪，排长一脸阴沉地坐在椅子上，手里的香烟燃烧着，额头渗出冷汗。旁边的督军听了这话，立刻站了起来，从枪套中拔出驳壳枪，对着排长，他知道，自己身上背着累累血债，一旦投降，下场就是被附近的泥腿子活活打死。想到这里，他又将手枪扫过人群，不过很明显，他并没有震住场，场面愈发控制不住。“啪”的一声，震耳欲聋，盖过了所有的争吵声。大家往枪响处看去，鲜红的血液洒向了地面，排长拔出的手枪正对着督军，枪口冒着一丝白烟，督军的尸体倒在地上。“全体集合，成两列队形，两只手举起步枪，向门外的共军投降。”\n\n£gezifu £gezifu 炮楼外，游击队员们压低身子，队长焦急地看着表，时间正一分一秒地流逝。“啪！”一枪，队员们立刻精神紧绷起来，望着不远处的炮楼，一片寂静。半分钟后，楼里的敌人举着白旗，两只手举着枪，走了出来。当最后一个士兵走出炮楼后，又是一声枪响。"
   LFB_COX_nc.9.a:"死有余辜！"
   LFB_COX_nc.10.t:"解放榆林"
-  LFB_COX_nc.10.d:"£gezifu £gezifu 李二点着了烟锅，蹲在城门的一隅，叭叭叭地抽着，眉眼带笑地看着进城的红军。\n\n£gezifu £gezifu 说实话，他真没有想到，一切都是那么的……顺利，南边的龙大帅（他还是愿意这么叫他，尽管这习惯已经被指导员教育过不少次）居然打下了南京，马上就要和日本鬼子干起仗来；更让他没想到的是红军——居然这么快就把辣鸡麻麻的榆林城打下来了！\n\n£gezifu £gezifu “这是天公在助我们哩,天上也见不得这鬼子的手段……”李二想想自己在这地界见过的畜生事情，呓语一样喃喃着，看着烟雾消散在天空中，像他刚来西北时见到的那缕绝望的炊烟。\n\n£gezifu £gezifu 烟抽完了，红军也快全部进城了，自己也得干活了不是？李二站起身来，拍拍屁股，走回联络站，站里面有他和地下战线同志们收集的榆林城资料和详情，对红军接收和维稳作用不小。他趿拉着鞋子，吊儿郎当地走在街上，他看见街边的商铺正在拆掉以前的膏药旗和青天白日，转头又把红旗挂了出来；他看见过街的红军被行人用敬畏的眼神打量着；他看见有小孩举着风车从红军边跑过，又被他的母亲扯了回去……\n\n£gezifu £gezifu 任重而道远啊……李二没奈何地想着，这榆林城里的百姓已经被军队作贱怕了，无论是哪来的军队都有种刻进骨子里的惧怕，希望我们的红军能让他们改观吧，就像我一样。\n\n£gezifu £gezifu “李叔！”李二听见一声大喊，随后后背被猛地一拍，“妈了个……你个小王八羔子！你给我吓死了！”李二低声恶狠狠地对着新兵蛋子嚷着；他刚刚以为出意外情况了，要不是他还想着观察到底是什么事，他就要把新兵蛋子给摔地上去！“嘿嘿，李叔，好久没见你了，街上看见你就没忍住…”新兵蛋子不好意思地笑着，李二也没了气“部队呢？你咋不跟大部队走？没组织没纪律的不怕关禁闭？”“跟连长打了报告了，他准了！诶诶李叔，你在榆林城待了有段时间了，这里日子跟我们那比怎么样？”新兵蛋子关注点明显没在他话上。\n\n£gezifu £gezifu “日子么……“李二想起来他一路上见的畜生事儿，再想想以前在新疆的日子，不禁痛苦地摇了摇头，但对着新兵蛋子的目光，他还是不忍心跟这个小孩子说。”这样吧，你先回部队，你李叔去办点事情，办完了带你下馆子，好好跟你说！”"
+  LFB_COX_nc.10.d:"£gezifu £gezifu 李二点着了烟锅，蹲在城门的一隅，叭叭叭地抽着，眉眼带笑地看着进城的红军。\n\n£gezifu £gezifu 说实话，他真没有想到，一切都是那么的……顺利，南边的龙大帅（他还是愿意这么叫他，尽管这习惯已经被指导员教育过不少次）居然打下了湖南，马上就要和日本鬼子干起仗来；更让他没想到的是红军——居然这么快就把辣鸡麻麻的榆林城打下来了！\n\n£gezifu £gezifu “这是天公在助我们哩,天上也见不得这鬼子的手段……”李二想想自己在这地界见过的畜生事情，呓语一样喃喃着，看着烟雾消散在天空中，像他刚来西北时见到的那缕绝望的炊烟。\n\n£gezifu £gezifu 烟抽完了，红军也快全部进城了，自己也得干活了不是？李二站起身来，拍拍屁股，走回联络站，站里面有他和地下战线同志们收集的榆林城资料和详情，对红军接收和维稳作用不小。他趿拉着鞋子，吊儿郎当地走在街上，他看见街边的商铺正在拆掉以前的膏药旗和青天白日，转头又把红旗挂了出来；他看见过街的红军被行人用敬畏的眼神打量着；他看见有小孩举着风车从红军边跑过，又被他的母亲扯了回去……\n\n£gezifu £gezifu 任重而道远啊……李二没奈何地想着，这榆林城里的百姓已经被军队作贱怕了，无论是哪来的军队都有种刻进骨子里的惧怕，希望我们的红军能让他们改观吧，就像我一样。\n\n£gezifu £gezifu “李叔！”李二听见一声大喊，随后后背被猛地一拍，“妈了个……你个小王八羔子！你给我吓死了！”李二低声恶狠狠地对着新兵蛋子嚷着；他刚刚以为出意外情况了，要不是他还想着观察到底是什么事，他就要把新兵蛋子给摔地上去！“嘿嘿，李叔，好久没见你了，街上看见你就没忍住…”新兵蛋子不好意思地笑着，李二也没了气“部队呢？你咋不跟大部队走？没组织没纪律的不怕关禁闭？”“跟连长打了报告了，他准了！诶诶李叔，你在榆林城待了有段时间了，这里日子跟我们那比怎么样？”新兵蛋子关注点明显没在他话上。\n\n£gezifu £gezifu “日子么……“李二想起来他一路上见的畜生事儿，再想想以前在新疆的日子，不禁痛苦地摇了摇头，但对着新兵蛋子的目光，他还是不忍心跟这个小孩子说。”这样吧，你先回部队，你李叔去办点事情，办完了带你下馆子，好好跟你说！”"
   LFB_COX_nc.10.a:"“好嘞，李叔！”"
   LFB_COX_nc.11.t:"延安，延安"
   LFB_COX_nc.11.d:"£gezifu £gezifu 毛岸英走在这处黄土大地之上。\n\n£gezifu £gezifu 这里是陕北，确切的说是延安城外的宝塔山。\n\n£gezifu £gezifu 尽管此地仍未重归安定，但毛岸英和一些老同志们还是在陕西解放后的第一时间来到了这里。\n\n£gezifu £gezifu 长征结束后，延安就作为中国革命澎湃搏动着的心脏，为中国的革命与抗日事业输送着血液——直到傅作义卖国求存，引日军过黄河。n\中共撤离延安前，延安地区的人口总数大约为三十五万左右，而日军攻入延安后，到今天，整个延安地区的人口都没有达到二十万。\n\n£gezifu £gezifu 根据在这里一直坚持到红军重返的老战士所说，直到一九五二年，日军仍然对延安和前根据地实行着严酷的军事管制。哪怕后来晋系军阀实际上接管了这些地区，残余的游击队仍然只是散兵游勇，难以连成一片。\n\n£gezifu £gezifu “多亏了乡亲，额们才有今天，才能跟着毛主席回来延安……”在这黄土地之上，一位五十多岁的老战士洒下了热泪。\n\n£gezifu £gezifu 毛岸英站在宝塔山上，看向了山下的延安城。是的，他现在做到了，从西伯利亚到远东，从黄沙之中的迪化再到战火摧残的兰州，现在他终于回到了这里，延安。\n\n£gezifu £gezifu 苏维埃政府目前仍然驻扎在兰州，接下来可能是要转移到新解放的华北大城市中，而毛岸英却提出要回到延安。这一决定在经过讨论后得到了一致同意。\n\n£gezifu £gezifu 在几个老党员的辨认下，毛主席曾经住过的窑洞被重新辨识了出来，毛岸英从没来过延安，但却没来由地熟悉。他自然而然地坐到了炕上，喃喃着：“父亲，我回来了……”\n\n£gezifu £gezifu 窗外，延安根据地在太阳升起的光芒之下又重新焕发了生机。\n\n£gezifu £gezifu 此时此刻，这颗革命的心脏再度波动在黄土高原之上，六万万同胞心中，唯有一个念头——"
@@ -133,8 +133,8 @@
   COX_Liberation_of_Lanzhou_desc:0 "\n\n\n\n\n\n§C起来，不愿做奴隶的人们！§!当西南的护国军冲进长沙的城门之时，§e日寇§!便已不得不凝神谛听中华民族追求自由的怒吼。\n\n可以预见的是，日寇即将对中华大地掀起一场血腥的，旷日持久的战争，在这种情况下，唯有§D整个中华民族§!的联合才能御敌求自由。现在便是向日寇宣战的最佳时机，尽管我们在第一次夺取兰州时遭遇了挫折，但同时也取得了一定成果：日军在我们的打击之下被迫收缩，兰州城外四处活跃着§C抗日游击队§!。为了全中华民族的自由，我们将第一次与§w武装到牙齿§!的日军正面对峙。\n\n如果我们能够夺下兰州，即可有效分散我们的盟友在其他区域的压力，相信§V全中国乃至整个东亚§!一旦联合起来，我们便能够看见§M自由的曙光。§!"
   COX_Liberation_of_Lanzhou_countdown:0 "机不可失…" 
   COX_Liberation_of_Lanzhou_countdown_desc:0 "护国军在西南的战术胜利打乱了日军的阵脚，驻扎兰州的西北方面军开始紧急调动。这产生了一个稍纵即逝的机会，我们必须尽快做好准备，发动进攻。" 
-  COX_Liberation_of_Lanzhou_invaded_Jap:0 "…时不再来"
-  COX_Liberation_of_Lanzhou_invaded_Jap_desc:0 "就在红军开进兰州的同时，西北军也在执行着他们的撤退计划。如果我们未能在一定时间内将他们切断，就会彻底失去这一歼灭敌军一大主力的机会。"
+  COX_Liberation_of_Lanzhou_war_timer:0 "…时不再来"
+  COX_Liberation_of_Lanzhou_war_timer_desc:0 "就在红军开进兰州的同时，西北军也在执行着他们的撤退计划。如果我们未能在一定时间内将他们切断，就会彻底失去这一歼灭敌军一大主力的机会。"
   COX_relation_army_old_ma:0 "联络马家残部"
   COX_coring_lanzhou_tt:0 "我们正在重建兰州"
   COX_relation_army_old_ma_tt:0 "这将降低我们在西北军渗透的衰减。"
@@ -258,7 +258,7 @@
   LFB_huabei.10.t:0"准备解放西藏"
   LFB_huabei.10.d:0"随着解放战争的进行，经过中央以及前委对如今形势的研判，一致认为现在正是进军西藏、武力解放藏区的最好时机；尤其要赶在国民党反动派之前，对西藏施加有效的影响。\n\n先行部队、物资等已开始在玉树集结准备，我军预计将在一个月之后进入藏区作战。"
   LFB_huabei.10.a:0"中国，统一而不可分割！"
-  LFB_IF_TIB_war_tt:0"§R我们将会在一个月后向西藏发起进攻！§!"
+  LFB_IF_COX_TIB_WAR_tt:0"§R我们将会在一个月后向西藏发起进攻！§!"
   LFB_huabei.11.t:0"在进藏动员大会上的讲话（节选）"
   LFB_huabei.11.d:0"“同志们！我听说，军中有人看不起西藏这块地方，但日本人，甚至是印度人，都在千方百计地想把它搞出去。现在藏军就布防在通天河南岸和金沙江西岸，不把西藏拿回来，我们未来的国防边界就不是喜马拉雅山界，而是金沙江边，国土丧失百万平方公里，子孙后代都会骂我们啊！进藏确实苦，可是西藏人民世世代代在农奴主残酷压迫下，生活岂不更苦？人民解放军以解除人民痛苦为己任，我们怎能眼看他们受苦而无动于衷？”\n……\n“邓委员特地为我们题词，题词是这样写的：‘接受与完成党所给予的最艰苦任务,是每个共产党员每个革命军人无上的光荣’。这说明，中央非常重视进藏工作，因为藏区情况相当特殊。全军必须认真学习上级颁发的解放西藏的有关文件，行动上严格遵守三大纪律、八项注意和约法八章，尊重藏族同胞的风俗习惯,从思想上提高对政策的认识,理解民族平等、民族团结的重要性。而我们作为进藏的先遣军，必须发挥好模范作用！”\n……\n“干部要带起带头作用，所有的人思想都要通，要高高兴兴地去西藏！”"
   LFB_huabei.11.a:0"将革命的红旗插到祖国的最高峰上！
