--- a/localisation/simp_chinese/LFB_peace_popup_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_peace_popup_l_simp_chinese.yml
@@ -1,22 +1,27 @@
 ﻿l_simp_chinese:
 ###结语###
- TNO_PEACE_POPUP_WAR_FREE_QIN: "[QIN.GetFlag]§i必死之人§!的尸骨淹没在漫漫黄沙之中，它§Y治下的人民§!终得解放。随着§Y[winning_country.GetNameWithFlag]§!的挺进，§V星火燎原之日，必将到来。§!"
- TNO_PEACE_POPUP_WAR_FREE_GAN: "[GAN.GetFlag]§r疯狗§!已死，通往中国腹地的大门已经敞开，§Y战争的烈火将再临于此。§!"
- TNO_PEACE_POPUP_WAR_FREE_CHI: "昔日作威作福的[CHI.GetFlag]§j汉奸§!已被中国人民踩在脚下，中华民族的§x解放§!§z事业§!更进一步。"
- TNO_PEACE_POPUP_WAR_FREE_GNG: "§e帝国主义§!用中国人民的血肉塑造的[GNG.GetFlag]§r畸形怪物§!已被中国人民的铁拳砸得粉碎，中华民族的§x解放§!§z事业§!更进一步。"
- TNO_PEACE_POPUP_WAR_FREE_MAN: "自命高贵的[MAN.GetFlag]§O傀儡§!从人民的尸骨所砌成的王座上跌落，中华民族的§x解放§!§z事业§!更进一步。"
- TNO_PEACE_POPUP_WAR_FREE_JAP: "[JAP.GetFlag]§e旭日§!东落，§x中华§!§z民族§!的§e百年国耻§!终得洗雪。"
+ TNO_PEACE_POPUP_WAR_LFB_XIN: "[XIN.GetFlag]§Y墙头草§!被来自北方的[COX.GetFlag]§x疾风§!连根拔起，古老的土地迎来了新的曙光。"
+ TNO_PEACE_POPUP_WAR_LFB_QINGHAI: "[QIN.GetFlag]§i必死之人§!的尸骨淹没在漫漫黄沙之中，它§Y治下的人民§!终得解放。随着§Y[winning_country.GetNameWithFlag]§!的挺进，§V星火燎原之日，必将到来。§!"
+ TNO_PEACE_POPUP_WAR_LFB_GAW_GAN: "[GAN.GetFlag]§e疯狗§!已死，通往中国腹地的大门已经敞开，§Y战争的烈火将再临于此。§!"
+ TNO_PEACE_POPUP_WAR_LFB_GAW_CHI: "昔日作威作福的[CHI.GetFlag]§j汉奸§!已被中国人民踩在脚下，中华民族的§x解放§!§z事业§!更进一步。"
+ TNO_PEACE_POPUP_WAR_LFB_GAW_GNG: "§e帝国主义§!用中国人民的血肉塑造的[GNG.GetFlag]§r畸形怪物§!已被中国人民的铁拳砸得粉碎，中华民族的§x解放§!§z事业§!更进一步。"
+ TNO_PEACE_POPUP_WAR_LFB_GAW_MAN: "自命高贵的[MAN.GetFlag]§O傀儡§!从人民的尸骨所砌成的王座上跌落，中华民族的§x解放§!§z事业§!更进一步。"
+ TNO_PEACE_POPUP_WAR_LFB_GAW_JAP: "[JAP.GetFlag]§e旭日§!东落，§x中华§!§z民族§!的§e百年国耻§!终得洗雪。"
+
+ TNO_PEACE_POPUP_WAR_LFB_GAW_COX: "[JAP.GetFlag]§e旭日§!的光辉再一次让[COX.GetFlag]§x红星§!黯然失色，§x中华§!§z民族§!寻求自由的梦想终究还是破灭了。"
+ TNO_PEACE_POPUP_WAR_LFB_GAW_YUN: "[JAP.GetFlag]§e旭日§!的光辉再一次让[YUN.GetFlag]§r血日§!黯然失色，§x中华§!§z民族§!寻求自由的梦想终究还是破灭了。"
+ TNO_PEACE_POPUP_WAR_LFB_IF_TIB: "新生的[COX.GetFlag]§x红日§!融化了千年的[TIB.GetFlag]§d冰雪§!，白雪之下的茵茵绿草终于迎来了光明。"
 ###配文###
- TNO_PEACE_POPUP_FLAVOR_XIN: "腐朽统治已被颠覆，热土将生长出革命新花。"
- TNO_PEACE_POPUP_FLAVOR_COX: "然而前程并非轻易如愿，因吾辈身负世间诸难。"
- TNO_PEACE_POPUP_FLAVOR_CHI: "教尔作人不作人，教尔不苟竟狗苟。而今俯首尔就擒，仍自教尔分人狗。"
- TNO_PEACE_POPUP_FLAVOR_JAP: "翻山倒海寻常事，今日愚公天下多。"
+ TNO_PEACE_POPUP_FLAVOR_LFB_XIN: "腐朽统治已被颠覆，热土将生长出革命新花。"
+ TNO_PEACE_POPUP_FLAVOR_LFB_GAW_COX: "然而前程并非轻易如愿，因吾辈身负世间诸难。"
+ TNO_PEACE_POPUP_FLAVOR_LFB_GAW_CHI: "教尔作人不作人，教尔不苟竟狗苟。而今俯首尔就擒，仍自教尔分人狗。"
+ TNO_PEACE_POPUP_FLAVOR_LFB_GAW_JAP: "翻山倒海寻常事，今日愚公天下多。"
  #以下内容来自群友“老大哥在看着你”，感谢他的贡献
  #TNO_PEACE_POPUP_FLAVOR_东突: "假若我降下一个天神，我必使他变成一个人样，我必使他们陷于自己所作的蒙蔽之中。"
- TNO_PEACE_POPUP_FLAVOR_SHX: "红缨缨大马你骑上走，妹妹送你到村口口；三年呀五载你要回家转，莫让妹妹等得愁。"
- TNO_PEACE_POPUP_FLAVOR_QIN: "用来警告你们的事，确是要发生的，你们绝不能逃避天谴。"
- TNO_PEACE_POPUP_FLAVOR_GAN: "猎枪折断了，于是鹰犬也被扯去。"
- TNO_PEACE_POPUP_FLAVOR_YUN: "宁静的群山啊，你是否仍在庇佑着生灵。"
- TNO_PEACE_POPUP_FLAVOR_GNG: "东亚畸形的心脏被扯开了幕布。"
- TNO_PEACE_POPUP_FLAVOR_MAN: "白卫军，白卫军，你那雪白的理想下是艰难前进的人民。"
- TNO_PEACE_POPUP_FLAVOR_TIB: "欲共卿卿两相悦，不期魂魄归帝乡。"
+ #TNO_PEACE_POPUP_FLAVOR_SHX: "红缨缨大马你骑上走，妹妹送你到村口口；三年呀五载你要回家转，莫让妹妹等得愁。"
+ TNO_PEACE_POPUP_FLAVOR_LFB_QINGHAI: "用来警告你们的事，确是要发生的，你们绝不能逃避天谴。"
+ TNO_PEACE_POPUP_FLAVOR_LFB_GAW_GAN: "当猎枪的枪口调转他处，鹰犬又怎能安然无恙？"
+ TNO_PEACE_POPUP_FLAVOR_LFB_GAW_YUN: "宁静的群山啊，你是否仍在庇佑着生灵？"
+ TNO_PEACE_POPUP_FLAVOR_LFB_GAW_GNG: "盖在东亚畸形心脏上的遮羞布被扯开了。"
+ TNO_PEACE_POPUP_FLAVOR_LFB_GAW_MAN: "白卫军，白卫军，你那洁白的理想下是艰难前进的人民。"
+ TNO_PEACE_POPUP_FLAVOR_LFB_IF_TIB: "欲共卿卿两相悦，不期魂魄归帝乡。"
