修正了l_simp_chinese写了两遍的错误

--- a/localisation/simp_chinese/COX_defeated_cg_l_simp_chinese.yml
+++ b/localisation/simp_chinese/COX_defeated_cg_l_simp_chinese.yml
@@ -48,14 +48,4 @@
  DCG.105.t: "教习"
  DCG.105.desc: "“欸，兄弟，‘红皮本’要不。”城南菜市场角落，一位书贩子正拦下一个眉目清秀，戴眼镜的年轻人。书贩观察了他好几天，见他是个脾气温和的读书人，于是在今天他来摊上买教辅材料时，冷不丁地小声问了一句。年轻人吓了一跳，“什么？”“《抗战必胜》，毛岸英写的。”“保真吗？”“童叟无欺……”听得此言，青年轻轻点了点头，书贩便在他要的教辅资料里塞了一本封面什么字都没有的红皮小册子。\n\n家门口，教师公寓底楼，两个警察正在重新粉刷墙面，“娘嘞，这帮地下党真的是没完了，天天写标语，今天是这里，明天又到南边学校围墙上写。真是不要命。”年轻人向他们打了个招呼，随后抓紧脚步走到公寓门口。“小薄啊，这么早就放学啦。”“是啊，李阿姨。今天要教的课时少。”左拐上楼，拿钥匙拧开门锁，进门，换好拖鞋，顺便把门带上，这对他来说已经是可以闭眼完成的事了。走到书桌前，合上昨天晚上备课的教案，拿出刚买的书，从中抽出了那本薄薄的小册子。还挺新的，没有明显的褶皱，看来是最近在哪个地下工坊印刷出来的。翻开没有内容的封面，第一页便是油印的标题《中国人民正义的抗日战争必将取得辉煌的胜利》，再翻过一页，便是正文。“第二次抗日战争正进入崭新的阶段，日本帝国主义为了维持其在东亚大陆的势力范围，对华北地区展开了军管，沿黄河布置了防线。他们的舰队封锁了海岸，由此阻止了中国寻求外援的渠道……\n\n但中国人民的反抗，令整个大陆的殖民地反倒成了日本帝国的拖累。那些汉奸卖国贼政府，越是要通过镇压维系自身存续，人民就越是清楚地看到他们的真面目，不只是中国，越南，马来西亚，菲律宾的人民也已经起来反抗了。貌似强大的日本帝国主义，只是张牙舞爪的纸老虎，中国人民不屈不挠的斗争，已将其拖入了泥潭。\n\n……\n\n天色渐晚，残阳西斜，年轻人咀嚼着这篇文章的一字一句。文字将他带回了战败前的最后时日，那时，全国的抵抗几近崩溃，虽不知西北境况如何，但西南已再无抵抗的余力了——日机的投弹焚烧着昆明的古建与男女老少，更烧蚀着人们抵抗的意志。在日寇如猛虎般的攻势下，中国挣扎着窒息……或许，中国人其实本不是没有取胜的机会？点起油灯，青年仔细端详着面前的薄本——纵使其结论已被证明是过于乐观的估计，但字里行间，都蕴含着当今最为稀缺又弥足珍贵之物——希望。\n\n窗外清鸣着鸟啼，街巷浮着炊烟与晨雾，青年摩挲着睡眼。下定莫大的决心，他将本子夹带在今日的教案之中，决定找个避人耳目的时间，与同学们聊聊此物。 "
  DCG.105.a: "无论多长时日，中国必将自由。"
- DCG_tt_105: "十年努力化为一朝泡影，轰轰烈烈的二次抗日战争在§e新秩序§!§F的阴影下迎来了终局。"l_simp_chinese:
- COX_failed: "新疆边区"
- COX_failed_ADJ: "新疆边区"
- COX_failed_DEF: "新疆"
- QIN_partisan: "国民革命军第四十集团军"
- QIN_partisan_ADJ: "国民革命军第四十集团军"
- QIN_partisan_DEF: "国军"
- GAN_win: "西北军政监"
- GAN_win_ADJ: "西北军政监"
- GAN_win_DEF: "西北"
-
+ DCG_tt_105: "十年努力化为一朝泡影，轰轰烈烈的二次抗日战争在§e新秩序§!§F的阴影下迎来了终局。"
